@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -41,39 +41,40 @@ package java.text;
 import org.jspecify.annotations.NullMarked;
 import org.jspecify.annotations.Nullable;
 
-import java.io.InvalidObjectException;
 import java.io.IOException;
+import java.io.InvalidObjectException;
 import java.io.ObjectInputStream;
-import java.text.DecimalFormat;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Locale;
+import java.util.Objects;
 
 
 /**
- * <code>MessageFormat</code> provides a means to produce concatenated
- * messages in a language-neutral way. Use this to construct messages
+ * {@code MessageFormat} provides a means to produce concatenated
+ * messages in a language-neutral way. Use this class to construct messages
  * displayed for end users.
  *
  * <p>
- * <code>MessageFormat</code> takes a set of objects, formats them, then
+ * {@code MessageFormat} takes a set of objects, formats them, then
  * inserts the formatted strings into the pattern at the appropriate places.
  *
  * <p>
  * <strong>Note:</strong>
- * <code>MessageFormat</code> differs from the other <code>Format</code>
- * classes in that you create a <code>MessageFormat</code> object with one
- * of its constructors (not with a <code>getInstance</code> style factory
- * method). The factory methods aren't necessary because <code>MessageFormat</code>
+ * {@code MessageFormat} differs from the other {@code Format}
+ * classes in that you create a {@code MessageFormat} object with one
+ * of its constructors (not with a {@code getInstance} style factory
+ * method). The factory methods aren't necessary because {@code MessageFormat}
  * itself doesn't implement locale specific behavior. Any locale specific
  * behavior is defined by the pattern that you provide as well as the
  * subformats used for inserted arguments.
  *
- * <h3><a id="patterns">Patterns and Their Interpretation</a></h3>
+ * <h2><a id="patterns">Patterns and Their Interpretation</a></h2>
  *
- * <code>MessageFormat</code> uses patterns of the following form:
+ * {@code MessageFormat} uses patterns of the following form:
  * <blockquote><pre>
  * <i>MessageFormatPattern:</i>
  *         <i>String</i>
@@ -84,8 +85,16 @@ import java.util.Locale;
  *         { <i>ArgumentIndex</i> , <i>FormatType</i> }
  *         { <i>ArgumentIndex</i> , <i>FormatType</i> , <i>FormatStyle</i> }
  *
- * <i>FormatType: one of </i>
- *         number date time choice
+ * <i>FormatType:</i>
+ *         number
+ *         dtf_date
+ *         dtf_time
+ *         dtf_datetime
+ *         <i>pre-defined DateTimeFormatter(s)</i>
+ *         date
+ *         time
+ *         choice
+ *         list
  *
  * <i>FormatStyle:</i>
  *         short
@@ -95,8 +104,229 @@ import java.util.Locale;
  *         integer
  *         currency
  *         percent
+ *         compact_short
+ *         compact_long
+ *         or
+ *         unit
  *         <i>SubformatPattern</i>
  * </pre></blockquote>
+ *
+ * <p>
+ * The <i>ArgumentIndex</i> value is a non-negative integer written
+ * using the digits {@code '0'} through {@code '9'}, and represents an index into the
+ * {@code arguments} array passed to the {@code format} methods
+ * or the result array returned by the {@code parse} methods.
+ * <p>
+ * The <i>FormatType</i> and <i>FormatStyle</i> values are used to create
+ * a {@code Format} instance for the format element. The following
+ * table shows how the values map to {@code Format} instances. These values
+ * are case-insensitive when passed to {@link #applyPattern(String)}. Combinations
+ * not shown in the table are illegal. A <i>SubformatPattern</i> must
+ * be a valid pattern string for the {@code Format} subclass used.
+ *
+ * <table class="plain">
+ * <caption style="display:none">Shows how FormatType and FormatStyle values map to Format instances</caption>
+ * <thead>
+ *    <tr>
+ *       <th scope="col" class="TableHeadingColor">FormatType
+ *       <th scope="col" class="TableHeadingColor">FormatStyle
+ *       <th scope="col" class="TableHeadingColor">Subformat Created
+ * </thead>
+ * <tbody>
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>{@code null}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal" rowspan=7>{@code number}
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>{@link NumberFormat#getInstance(Locale) NumberFormat.getInstance}{@code (getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code integer}
+ *       <td>{@link NumberFormat#getIntegerInstance(Locale) NumberFormat.getIntegerInstance}{@code (getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code currency}
+ *       <td>{@link NumberFormat#getCurrencyInstance(Locale) NumberFormat.getCurrencyInstance}{@code (getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code percent}
+ *       <td>{@link NumberFormat#getPercentInstance(Locale) NumberFormat.getPercentInstance}{@code (getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code compact_short}
+ *       <td>{@link NumberFormat#getCompactNumberInstance(Locale, NumberFormat.Style)
+ *       NumberFormat.getCompactNumberInstance}{@code (getLocale(),} {@link NumberFormat.Style#SHORT})
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code compact_long}
+ *       <td>{@link NumberFormat#getCompactNumberInstance(Locale, NumberFormat.Style)
+ *       NumberFormat.getCompactNumberInstance}{@code (getLocale(),} {@link NumberFormat.Style#LONG})
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal"><i>SubformatPattern</i>
+ *       <td>{@code new} {@link DecimalFormat#DecimalFormat(String,DecimalFormatSymbols)
+ *       DecimalFormat}{@code (subformatPattern,} {@link DecimalFormatSymbols#getInstance(Locale)
+ *       DecimalFormatSymbols.getInstance}{@code (getLocale()))}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal" rowspan=6>{@code dtf_date}
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>{@link DateTimeFormatter#ofLocalizedDate(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDate(}{@link java.time.format.FormatStyle#MEDIUM}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code short}
+ *       <td>{@link DateTimeFormatter#ofLocalizedDate(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDate(}{@link java.time.format.FormatStyle#SHORT}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code medium}
+ *       <td>{@link DateTimeFormatter#ofLocalizedDate(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDate(}{@link java.time.format.FormatStyle#MEDIUM}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code long}
+ *       <td>{@link DateTimeFormatter#ofLocalizedDate(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDate(}{@link java.time.format.FormatStyle#LONG}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code full}
+ *       <td>{@link DateTimeFormatter#ofLocalizedDate(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDate(}{@link java.time.format.FormatStyle#FULL}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal"><i>SubformatPattern</i>
+ *       <td>{@link DateTimeFormatter#ofPattern(String, Locale)
+ *       DateTimeFormatter.ofPattern}{@code (subformatPattern, getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal" rowspan=6>{@code dtf_time}
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>{@link DateTimeFormatter#ofLocalizedTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedTime(}{@link java.time.format.FormatStyle#MEDIUM}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code short}
+ *       <td>{@link DateTimeFormatter#ofLocalizedTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedTime(}{@link java.time.format.FormatStyle#SHORT}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code medium}
+ *       <td>{@link DateTimeFormatter#ofLocalizedTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedTime(}{@link java.time.format.FormatStyle#MEDIUM}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code long}
+ *       <td>{@link DateTimeFormatter#ofLocalizedTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedTime(}{@link java.time.format.FormatStyle#LONG}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code full}
+ *       <td>{@link DateTimeFormatter#ofLocalizedTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedTime(}{@link java.time.format.FormatStyle#FULL}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal"><i>SubformatPattern</i>
+ *       <td>{@link DateTimeFormatter#ofPattern(String, Locale)   DateTimeFormatter.ofPattern}{@code (subformatPattern, getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal" rowspan=6>{@code dtf_datetime}
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>{@link DateTimeFormatter#ofLocalizedDateTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDateTime(}{@link java.time.format.FormatStyle#MEDIUM}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code short}
+ *       <td>{@link DateTimeFormatter#ofLocalizedDateTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDateTime(}{@link java.time.format.FormatStyle#SHORT}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code medium}
+ *       <td>{@link DateTimeFormatter#ofLocalizedDateTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDateTime(}{@link java.time.format.FormatStyle#MEDIUM}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code long}
+ *       <td>{@link DateTimeFormatter#ofLocalizedDateTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDateTime(}{@link java.time.format.FormatStyle#LONG}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code full}
+ *       <td>{@link DateTimeFormatter#ofLocalizedDateTime(java.time.format.FormatStyle)
+ *       DateTimeFormatter.ofLocalizedDateTime(}{@link java.time.format.FormatStyle#FULL}{@code ).withLocale(getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal"><i>SubformatPattern</i>
+ *       <td>{@link DateTimeFormatter#ofPattern(String, Locale)
+ *       DateTimeFormatter.ofPattern}{@code (subformatPattern, getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal" rowspan=1>{@code pre-defined DateTimeFormatter(s)}
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>The {@code pre-defined DateTimeFormatter(s)} are used as a {@code FormatType} :
+ *       {@link DateTimeFormatter#BASIC_ISO_DATE BASIC_ISO_DATE},
+ *       {@link DateTimeFormatter#ISO_LOCAL_DATE ISO_LOCAL_DATE},
+ *       {@link DateTimeFormatter#ISO_OFFSET_DATE ISO_OFFSET_DATE},
+ *       {@link DateTimeFormatter#ISO_DATE ISO_DATE},
+ *       {@link DateTimeFormatter#ISO_LOCAL_TIME ISO_LOCAL_TIME},
+ *       {@link DateTimeFormatter#ISO_OFFSET_TIME ISO_OFFSET_TIME},
+ *       {@link DateTimeFormatter#ISO_TIME ISO_TIME},
+ *       {@link DateTimeFormatter#ISO_LOCAL_DATE_TIME ISO_LOCAL_DATE_TIME},
+ *       {@link DateTimeFormatter#ISO_OFFSET_DATE_TIME ISO_OFFSET_DATE_TIME},
+ *       {@link DateTimeFormatter#ISO_ZONED_DATE_TIME ISO_ZONED_DATE_TIME},
+ *       {@link DateTimeFormatter#ISO_DATE_TIME ISO_DATE_TIME},
+ *       {@link DateTimeFormatter#ISO_ORDINAL_DATE ISO_ORDINAL_DATE},
+ *       {@link DateTimeFormatter#ISO_WEEK_DATE ISO_WEEK_DATE},
+ *       {@link DateTimeFormatter#ISO_INSTANT ISO_INSTANT},
+ *       {@link DateTimeFormatter#RFC_1123_DATE_TIME RFC_1123_DATE_TIME}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal" rowspan=6>{@code date}
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>{@link DateFormat#getDateInstance(int,Locale)
+ *       DateFormat.getDateInstance}{@code (}{@link DateFormat#DEFAULT}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code short}
+ *       <td>{@link DateFormat#getDateInstance(int,Locale)
+ *       DateFormat.getDateInstance}{@code (}{@link DateFormat#SHORT}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code medium}
+ *       <td>{@link DateFormat#getDateInstance(int,Locale)
+ *       DateFormat.getDateInstance}{@code (}{@link DateFormat#MEDIUM}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code long}
+ *       <td>{@link DateFormat#getDateInstance(int,Locale)
+ *       DateFormat.getDateInstance}{@code (}{@link DateFormat#LONG}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code full}
+ *       <td>{@link DateFormat#getDateInstance(int,Locale)
+ *       DateFormat.getDateInstance}{@code (}{@link DateFormat#FULL}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal"><i>SubformatPattern</i>
+ *       <td>{@code new} {@link SimpleDateFormat#SimpleDateFormat(String,Locale)
+ *       SimpleDateFormat}{@code (subformatPattern, getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal" rowspan=6>{@code time}
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>{@link DateFormat#getTimeInstance(int,Locale)
+ *       DateFormat.getTimeInstance}{@code (}{@link DateFormat#DEFAULT}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code short}
+ *       <td>{@link DateFormat#getTimeInstance(int,Locale)
+ *       DateFormat.getTimeInstance}{@code (}{@link DateFormat#SHORT}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code medium}
+ *       <td>{@link DateFormat#getTimeInstance(int,Locale)
+ *       DateFormat.getTimeInstance}{@code (}{@link DateFormat#MEDIUM}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code long}
+ *       <td>{@link DateFormat#getTimeInstance(int,Locale)
+ *       DateFormat.getTimeInstance}{@code (}{@link DateFormat#LONG}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code full}
+ *       <td>{@link DateFormat#getTimeInstance(int,Locale)
+ *       DateFormat.getTimeInstance}{@code (}{@link DateFormat#FULL}{@code , getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal"><i>SubformatPattern</i>
+ *       <td>{@code new} {@link SimpleDateFormat#SimpleDateFormat(String,Locale)
+ *       SimpleDateFormat}{@code (subformatPattern, getLocale())}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code choice}
+ *       <th scope="row" style="font-weight:normal"><i>SubformatPattern</i>
+ *       <td>{@code new} {@link ChoiceFormat#ChoiceFormat(String) ChoiceFormat}{@code (subformatPattern)}
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal" rowspan=3>{@code list}
+ *       <th scope="row" style="font-weight:normal"><i>(none)</i>
+ *       <td>{@link ListFormat#getInstance(Locale, ListFormat.Type, ListFormat.Style)
+ *       ListFormat.getInstance}{@code (getLocale()}, {@link ListFormat.Type#STANDARD}, {@link ListFormat.Style#FULL})
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code or}
+ *       <td>{@link ListFormat#getInstance(Locale, ListFormat.Type, ListFormat.Style)
+ *       ListFormat.getInstance}{@code (getLocale()}, {@link ListFormat.Type#OR}, {@link ListFormat.Style#FULL})
+ *    <tr>
+ *       <th scope="row" style="font-weight:normal">{@code unit}
+ *       <td>{@link ListFormat#getInstance(Locale, ListFormat.Type, ListFormat.Style)
+ *       ListFormat.getInstance}{@code (getLocale()}, {@link ListFormat.Type#UNIT}, {@link ListFormat.Style#FULL}}
+ * </tbody>
+ * </table>
+ *
+ * <h3>Quoting Rules in Patterns</h3>
  *
  * <p>Within a <i>String</i>, a pair of single quotes can be used to
  * quote any arbitrary characters except single quotes. For example,
@@ -105,7 +335,7 @@ import java.util.Locale;
  * must be represented by doubled single quotes {@code ''} throughout a
  * <i>String</i>.  For example, pattern string <code>"'{''}'"</code> is
  * interpreted as a sequence of <code>'{</code> (start of quoting and a
- * left curly brace), <code>''</code> (a single quote), and
+ * left curly brace), {@code ''} (a single quote), and
  * <code>}'</code> (a right curly brace and end of quoting),
  * <em>not</em> <code>'{'</code> and <code>'}'</code> (quoted left and
  * right curly braces): representing string <code>"{'}"</code>,
@@ -137,152 +367,37 @@ import java.util.Locale;
  * Note that localizers may need to use single quotes in translated
  * strings where the original version doesn't have them.
  * </dl>
- * <p>
- * The <i>ArgumentIndex</i> value is a non-negative integer written
- * using the digits {@code '0'} through {@code '9'}, and represents an index into the
- * {@code arguments} array passed to the {@code format} methods
- * or the result array returned by the {@code parse} methods.
- * <p>
- * The <i>FormatType</i> and <i>FormatStyle</i> values are used to create
- * a {@code Format} instance for the format element. The following
- * table shows how the values map to {@code Format} instances. Combinations not
- * shown in the table are illegal. A <i>SubformatPattern</i> must
- * be a valid pattern string for the {@code Format} subclass used.
  *
- * <table class="plain">
- * <caption style="display:none">Shows how FormatType and FormatStyle values map to Format instances</caption>
- * <thead>
- *    <tr>
- *       <th scope="col" class="TableHeadingColor">FormatType
- *       <th scope="col" class="TableHeadingColor">FormatStyle
- *       <th scope="col" class="TableHeadingColor">Subformat Created
- * </thead>
- * <tbody>
- *    <tr>
- *       <th scope="row" style="text-weight: normal"><i>(none)</i>
- *       <th scope="row" style="text-weight: normal"><i>(none)</i>
- *       <td>{@code null}
- *    <tr>
- *       <th scope="row" style="text-weight: normal" rowspan=5>{@code number}
- *       <th scope="row" style="text-weight: normal"><i>(none)</i>
- *       <td>{@link NumberFormat#getInstance(Locale) NumberFormat.getInstance}{@code (getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code integer}
- *       <td>{@link NumberFormat#getIntegerInstance(Locale) NumberFormat.getIntegerInstance}{@code (getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code currency}
- *       <td>{@link NumberFormat#getCurrencyInstance(Locale) NumberFormat.getCurrencyInstance}{@code (getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code percent}
- *       <td>{@link NumberFormat#getPercentInstance(Locale) NumberFormat.getPercentInstance}{@code (getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal"><i>SubformatPattern</i>
- *       <td>{@code new} {@link DecimalFormat#DecimalFormat(String,DecimalFormatSymbols) DecimalFormat}{@code (subformatPattern,} {@link DecimalFormatSymbols#getInstance(Locale) DecimalFormatSymbols.getInstance}{@code (getLocale()))}
- *    <tr>
- *       <th scope="row" style="text-weight: normal" rowspan=6>{@code date}
- *       <th scope="row" style="text-weight: normal"><i>(none)</i>
- *       <td>{@link DateFormat#getDateInstance(int,Locale) DateFormat.getDateInstance}{@code (}{@link DateFormat#DEFAULT}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code short}
- *       <td>{@link DateFormat#getDateInstance(int,Locale) DateFormat.getDateInstance}{@code (}{@link DateFormat#SHORT}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code medium}
- *       <td>{@link DateFormat#getDateInstance(int,Locale) DateFormat.getDateInstance}{@code (}{@link DateFormat#DEFAULT}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code long}
- *       <td>{@link DateFormat#getDateInstance(int,Locale) DateFormat.getDateInstance}{@code (}{@link DateFormat#LONG}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code full}
- *       <td>{@link DateFormat#getDateInstance(int,Locale) DateFormat.getDateInstance}{@code (}{@link DateFormat#FULL}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal"><i>SubformatPattern</i>
- *       <td>{@code new} {@link SimpleDateFormat#SimpleDateFormat(String,Locale) SimpleDateFormat}{@code (subformatPattern, getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal" rowspan=6>{@code time}
- *       <th scope="row" style="text-weight: normal"><i>(none)</i>
- *       <td>{@link DateFormat#getTimeInstance(int,Locale) DateFormat.getTimeInstance}{@code (}{@link DateFormat#DEFAULT}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code short}
- *       <td>{@link DateFormat#getTimeInstance(int,Locale) DateFormat.getTimeInstance}{@code (}{@link DateFormat#SHORT}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code medium}
- *       <td>{@link DateFormat#getTimeInstance(int,Locale) DateFormat.getTimeInstance}{@code (}{@link DateFormat#DEFAULT}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code long}
- *       <td>{@link DateFormat#getTimeInstance(int,Locale) DateFormat.getTimeInstance}{@code (}{@link DateFormat#LONG}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code full}
- *       <td>{@link DateFormat#getTimeInstance(int,Locale) DateFormat.getTimeInstance}{@code (}{@link DateFormat#FULL}{@code , getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal"><i>SubformatPattern</i>
- *       <td>{@code new} {@link SimpleDateFormat#SimpleDateFormat(String,Locale) SimpleDateFormat}{@code (subformatPattern, getLocale())}
- *    <tr>
- *       <th scope="row" style="text-weight: normal">{@code choice}
- *       <th scope="row" style="text-weight: normal"><i>SubformatPattern</i>
- *       <td>{@code new} {@link ChoiceFormat#ChoiceFormat(String) ChoiceFormat}{@code (subformatPattern)}
- * </tbody>
- * </table>
+ * <h2>Usage Information</h2>
  *
- * <h4>Usage Information</h4>
  *
- * <p>
- * Here are some examples of usage.
- * In real internationalized programs, the message format pattern and other
- * static strings will, of course, be obtained from resource bundles.
- * Other parameters will be dynamically determined at runtime.
- * <p>
- * The first example uses the static method <code>MessageFormat.format</code>,
- * which internally creates a <code>MessageFormat</code> for one-time use:
- * <blockquote><pre>
+ * The following example demonstrates a general usage of {@code MessageFormat}.
+ * In internationalized programs, the message format pattern and other
+ * static strings will likely be obtained from resource bundles.
+ *
+ * {@snippet lang=java :
  * int planet = 7;
  * String event = "a disturbance in the Force";
- *
  * String result = MessageFormat.format(
  *     "At {1,time} on {1,date}, there was {2} on planet {0,number,integer}.",
- *     planet, new Date(), event);
- * </pre></blockquote>
- * The output is:
+ *     planet, new GregorianCalendar(2053, Calendar.JULY, 3, 12, 30).getTime(), event);
+ * }
+ *
+ * {@code result} returns the following:
  * <blockquote><pre>
- * At 12:30 PM on Jul 3, 2053, there was a disturbance in the Force on planet 7.
+ * At 12:30:00 PM on Jul 3, 2053, there was a disturbance in the Force on planet 7.
  * </pre></blockquote>
  *
  * <p>
- * The following example creates a <code>MessageFormat</code> instance that
- * can be used repeatedly:
- * <blockquote><pre>
- * int fileCount = 1273;
- * String diskName = "MyDisk";
- * Object[] testArgs = {new Long(fileCount), diskName};
+ * For more sophisticated patterns, {@link ChoiceFormat} can be used with
+ * {@code MessageFormat} to produce accurate forms for singular and plural:
+ * {@snippet lang=java :
+ * MessageFormat msgFmt = new MessageFormat("The disk \"{0}\" contains {1,choice,0#no files|1#one file|1< {1,number,integer} files}.");
+ * Object[] args = {"MyDisk", fileCount};
+ * String result = msgFmt.format(args);
+ * }
  *
- * MessageFormat form = new MessageFormat(
- *     "The disk \"{1}\" contains {0} file(s).");
- *
- * System.out.println(form.format(testArgs));
- * </pre></blockquote>
- * The output with different values for <code>fileCount</code>:
- * <blockquote><pre>
- * The disk "MyDisk" contains 0 file(s).
- * The disk "MyDisk" contains 1 file(s).
- * The disk "MyDisk" contains 1,273 file(s).
- * </pre></blockquote>
- *
- * <p>
- * For more sophisticated patterns, you can use a <code>ChoiceFormat</code>
- * to produce correct forms for singular and plural:
- * <blockquote><pre>
- * MessageFormat form = new MessageFormat("The disk \"{1}\" contains {0}.");
- * double[] filelimits = {0,1,2};
- * String[] filepart = {"no files","one file","{0,number} files"};
- * ChoiceFormat fileform = new ChoiceFormat(filelimits, filepart);
- * form.setFormatByArgumentIndex(0, fileform);
- *
- * int fileCount = 1273;
- * String diskName = "MyDisk";
- * Object[] testArgs = {new Long(fileCount), diskName};
- *
- * System.out.println(form.format(testArgs));
- * </pre></blockquote>
- * The output with different values for <code>fileCount</code>:
+ * {@code result} with different values for {@code fileCount}, returns the following:
  * <blockquote><pre>
  * The disk "MyDisk" contains no files.
  * The disk "MyDisk" contains one file.
@@ -290,46 +405,70 @@ import java.util.Locale;
  * </pre></blockquote>
  *
  * <p>
- * You can create the <code>ChoiceFormat</code> programmatically, as in the
- * above example, or by using a pattern. See {@link ChoiceFormat}
- * for more information.
- * <blockquote><pre>{@code
- * form.applyPattern(
- *    "There {0,choice,0#are no files|1#is one file|1<are {0,number,integer} files}.");
- * }</pre></blockquote>
- *
- * <p>
- * <strong>Note:</strong> As we see above, the string produced
- * by a <code>ChoiceFormat</code> in <code>MessageFormat</code> is treated as special;
- * occurrences of '{' are used to indicate subformats, and cause recursion.
- * If you create both a <code>MessageFormat</code> and <code>ChoiceFormat</code>
+ * <strong id="pattern_caveats">Notes:</strong> As seen in the previous snippet,
+ * the string produced by a {@code ChoiceFormat} in {@code MessageFormat} is
+ * treated as special; occurrences of '{' are used to indicate subformats, and
+ * cause recursion. If a {@code FormatElement} is defined in the {@code ChoiceFormat}
+ * pattern, it will only be formatted according to the {@code FormatType} and
+ * {@code FormatStyle} pattern provided. The associated subformats of the
+ * top level {@code MessageFormat} will not be applied to the {@code FormatElement}
+ * defined in the {@code ChoiceFormat} pattern.
+ * If you create both a {@code MessageFormat} and {@code ChoiceFormat}
  * programmatically (instead of using the string patterns), then be careful not to
  * produce a format that recurses on itself, which will cause an infinite loop.
+ *
+ * <h2>Formatting Date and Time</h2>
+ *
+ * MessageFormat provides patterns that support the date/time formatters in the
+ * {@link java.time.format} and {@link java.text} packages. Consider the following three examples,
+ * with a date of 11/16/2023:
+ *
+ * <p>1) a <i>date</i> {@code FormatType} with a <i>full</i> {@code FormatStyle},
+ * {@snippet lang=java :
+ * Object[] arg = {new GregorianCalendar(2023, Calendar.NOVEMBER, 16).getTime()};
+ * var fmt = new MessageFormat("The date was {0,date,full}");
+ * fmt.format(arg); // returns "The date was Thursday, November 16, 2023"
+ * }
+ *
+ * <p>2) a <i>dtf_date</i> {@code FormatType} with a <i>full</i> {@code FormatStyle},
+ * {@snippet lang=java :
+ * Object[] arg = {LocalDate.of(2023, 11, 16)};
+ * var fmt = new MessageFormat("The date was {0,dtf_date,full}");
+ * fmt.format(arg); // returns "The date was Thursday, November 16, 2023"
+ * }
+ *
+ * <p>3) an <i>ISO_LOCAL_DATE</i> {@code FormatType},
+ * {@snippet lang=java :
+ * Object[] arg = {LocalDate.of(2023, 11, 16)};
+ * var fmt = new MessageFormat("The date was {0,ISO_LOCAL_DATE}");
+ * fmt.format(arg); // returns "The date was 2023-11-16"
+ * }
+ *
+ * <h3>Parsing</h3>
  * <p>
  * When a single argument is parsed more than once in the string, the last match
  * will be the final result of the parsing.  For example,
- * <blockquote><pre>
+ * {@snippet lang=java :
  * MessageFormat mf = new MessageFormat("{0,number,#.##}, {0,number,#.#}");
- * Object[] objs = {new Double(3.1415)};
+ * Object[] objs = {Double.valueOf(3.1415)};
  * String result = mf.format( objs );
  * // result now equals "3.14, 3.1"
- * objs = null;
  * objs = mf.parse(result, new ParsePosition(0));
- * // objs now equals {new Double(3.1)}
- * </pre></blockquote>
+ * // objs now equals {Double.valueOf(3.1)}
+ * }
  *
  * <p>
  * Likewise, parsing with a {@code MessageFormat} object using patterns containing
  * multiple occurrences of the same argument would return the last match.  For
  * example,
- * <blockquote><pre>
+ * {@snippet lang=java :
  * MessageFormat mf = new MessageFormat("{0}, {0}, {0}");
  * String forParsing = "x, y, z";
  * Object[] objs = mf.parse(forParsing, new ParsePosition(0));
- * // result now equals {new String("z")}
- * </pre></blockquote>
+ * // objs now equals {new String("z")}
+ * }
  *
- * <h4><a id="synchronization">Synchronization</a></h4>
+ * <h3><a id="synchronization">Synchronization</a></h3>
  *
  * <p>
  * Message formats are not synchronized.
@@ -345,6 +484,7 @@ import java.util.Locale;
  * @see          ChoiceFormat
  * @see          DateFormat
  * @see          SimpleDateFormat
+ * @see          DateTimeFormatter
  *
  * @author       Mark Davis
  * @since 1.1
@@ -353,6 +493,7 @@ import java.util.Locale;
 @NullMarked
 public class MessageFormat extends Format {
 
+    @java.io.Serial
     private static final long serialVersionUID = 6479157306784022952L;
 
     /**
@@ -362,16 +503,16 @@ public class MessageFormat extends Format {
      * The constructor first sets the locale, then parses the pattern and
      * creates a list of subformats for the format elements contained in it.
      * Patterns and their interpretation are specified in the
-     * <a href="#patterns">class description</a>.
+     * {@linkplain ##patterns class description}.
      *
      * @param pattern the pattern for this message format
-     * @exception IllegalArgumentException if the pattern is invalid
-     * @exception NullPointerException if {@code pattern} is
+     * @throws    IllegalArgumentException if the pattern is invalid
+     * @throws    NullPointerException if {@code pattern} is
      *            {@code null}
      */
     public MessageFormat(String pattern) {
         this.locale = Locale.getDefault(Locale.Category.FORMAT);
-        applyPattern(pattern);
+        applyPatternImpl(pattern);
     }
 
     /**
@@ -380,18 +521,26 @@ public class MessageFormat extends Format {
      * The constructor first sets the locale, then parses the pattern and
      * creates a list of subformats for the format elements contained in it.
      * Patterns and their interpretation are specified in the
-     * <a href="#patterns">class description</a>.
+     * {@linkplain ##patterns class description}.
+     *
+     * @implSpec The default implementation throws a
+     * {@code NullPointerException} if {@code locale} is {@code null}
+     * either during the creation of the {@code MessageFormat} object or later
+     * when {@code format()} is called by a {@code MessageFormat}
+     * instance with a null locale and the implementation utilizes a
+     * locale-dependent subformat.
      *
      * @param pattern the pattern for this message format
      * @param locale the locale for this message format
-     * @exception IllegalArgumentException if the pattern is invalid
-     * @exception NullPointerException if {@code pattern} is
-     *            {@code null}
+     * @throws    IllegalArgumentException if the pattern is invalid
+     * @throws    NullPointerException if {@code pattern} is
+     *            {@code null} or {@code locale} is {@code null} and the
+     *            implementation uses a locale-dependent subformat.
      * @since 1.4
      */
     public MessageFormat(String pattern, Locale locale) {
         this.locale = locale;
-        applyPattern(pattern);
+        applyPatternImpl(pattern);
     }
 
     /**
@@ -401,8 +550,8 @@ public class MessageFormat extends Format {
      * <li>to the {@link #applyPattern applyPattern}
      *     and {@link #toPattern toPattern} methods if format elements specify
      *     a format type and therefore have the subformats created in the
-     *     <code>applyPattern</code> method, as well as
-     * <li>to the <code>format</code> and
+     *     {@code applyPattern} method, as well as
+     * <li>to the {@code format} and
      *     {@link #formatToCharacterIterator formatToCharacterIterator} methods
      *     if format elements do not specify a format type and therefore have
      *     the subformats created in the formatting methods.
@@ -430,15 +579,29 @@ public class MessageFormat extends Format {
      * The method parses the pattern and creates a list of subformats
      * for the format elements contained in it.
      * Patterns and their interpretation are specified in the
-     * <a href="#patterns">class description</a>.
+     * {@linkplain ##patterns class description}.
      *
      * @param pattern the pattern for this message format
-     * @exception IllegalArgumentException if the pattern is invalid
-     * @exception NullPointerException if {@code pattern} is
+     * @throws    IllegalArgumentException if the pattern is invalid
+     * @throws    NullPointerException if {@code pattern} is
      *            {@code null}
      */
-    @SuppressWarnings("fallthrough") // fallthrough in switch is expected, suppress it
     public void applyPattern(String pattern) {
+        applyPatternImpl(pattern);
+    }
+
+    /**
+     * Implementation of applying a pattern to this MessageFormat.
+     * This method processes a String pattern in accordance with the MessageFormat
+     * pattern syntax and sets the internal {@code pattern} variable as well as
+     * populating the {@code formats} array with the subformats defined in the
+     * pattern. See the {@linkplain ##patterns} section for further understanding
+     * of certain special characters: "{", "}", ",". See {@linkplain
+     * ##makeFormat(int, int, StringBuilder[])} for the implementation of setting
+     * a subformat.
+     */
+    @SuppressWarnings("fallthrough") // fallthrough in switch is expected, suppress it
+    private void applyPatternImpl(String pattern) {
             StringBuilder[] segments = new StringBuilder[4];
             // Allocate only segments[SEG_RAW] here. The rest are
             // allocated on demand.
@@ -492,7 +655,8 @@ public class MessageFormat extends Format {
                         case '}':
                             if (braceStack == 0) {
                                 part = SEG_RAW;
-                                makeFormat(i, formatNumber, segments);
+                                // Set the subformat
+                                setFormatFromPattern(i, formatNumber, segments);
                                 formatNumber++;
                                 // throw away other segments
                                 segments[SEG_INDEX] = null;
@@ -528,11 +692,21 @@ public class MessageFormat extends Format {
 
 
     /**
-     * Returns a pattern representing the current state of the message format.
-     * The string is constructed from internal information and therefore
-     * does not necessarily equal the previously applied pattern.
+     * {@return a String pattern adhering to the {@link ##patterns patterns section} that
+     * represents the current state of this {@code MessageFormat}}
      *
-     * @return a pattern representing the current state of the message format
+     * The string is constructed from internal information and therefore
+     * does not necessarily equal the previously applied pattern. The order of
+     * {@code FormatStyle} matching is not guaranteed. That is, a {@code
+     * FormatStyle} produced may not be equivalent to the corresponding style passed,
+     * in the instance that multiple styles are equivalent.
+     *
+     * @implSpec The implementation in {@link MessageFormat} returns a
+     * string that, when passed to a {@code MessageFormat()} constructor
+     * or {@link #applyPattern applyPattern()}, produces an instance that
+     * is semantically equivalent to this instance. If a subformat cannot be
+     * converted to a String pattern, the {@code FormatType} and {@code FormatStyle}
+     * will be omitted from the {@code FormatElement}.
      */
     public String toPattern() {
         // later, make this more extensible
@@ -541,72 +715,89 @@ public class MessageFormat extends Format {
         for (int i = 0; i <= maxOffset; ++i) {
             copyAndFixQuotes(pattern, lastOffset, offsets[i], result);
             lastOffset = offsets[i];
-            result.append('{').append(argumentNumbers[i]);
-            Format fmt = formats[i];
-            if (fmt == null) {
-                // do nothing, string format
-            } else if (fmt instanceof NumberFormat) {
-                if (fmt.equals(NumberFormat.getInstance(locale))) {
-                    result.append(",number");
-                } else if (fmt.equals(NumberFormat.getCurrencyInstance(locale))) {
-                    result.append(",number,currency");
-                } else if (fmt.equals(NumberFormat.getPercentInstance(locale))) {
-                    result.append(",number,percent");
-                } else if (fmt.equals(NumberFormat.getIntegerInstance(locale))) {
-                    result.append(",number,integer");
-                } else {
-                    if (fmt instanceof DecimalFormat) {
-                        result.append(",number,").append(((DecimalFormat)fmt).toPattern());
-                    } else if (fmt instanceof ChoiceFormat) {
-                        result.append(",choice,").append(((ChoiceFormat)fmt).toPattern());
-                    } else {
-                        // UNKNOWN
-                    }
-                }
-            } else if (fmt instanceof DateFormat) {
-                int index;
-                for (index = MODIFIER_DEFAULT; index < DATE_TIME_MODIFIERS.length; index++) {
-                    DateFormat df = DateFormat.getDateInstance(DATE_TIME_MODIFIERS[index],
-                                                               locale);
-                    if (fmt.equals(df)) {
-                        result.append(",date");
-                        break;
-                    }
-                    df = DateFormat.getTimeInstance(DATE_TIME_MODIFIERS[index],
-                                                    locale);
-                    if (fmt.equals(df)) {
-                        result.append(",time");
-                        break;
-                    }
-                }
-                if (index >= DATE_TIME_MODIFIERS.length) {
-                    if (fmt instanceof SimpleDateFormat) {
-                        result.append(",date,").append(((SimpleDateFormat)fmt).toPattern());
-                    } else {
-                        // UNKNOWN
-                    }
-                } else if (index != MODIFIER_DEFAULT) {
-                    result.append(',').append(DATE_TIME_MODIFIER_KEYWORDS[index]);
-                }
-            } else {
-                //result.append(", unknown");
-            }
-            result.append('}');
+            result.append('{')
+                    .append(argumentNumbers[i])
+                    .append(patternFromFormat(formats[i]))
+                    .append('}');
         }
         copyAndFixQuotes(pattern, lastOffset, pattern.length(), result);
         return result.toString();
     }
 
     /**
+     * This method converts a Format into a {@code FormatType} and {@code
+     * FormatStyle}, if applicable. For each Format, this method will
+     * first check against the pre-defined styles established in the
+     * {@link ##patterns patterns section}. Any "default"/"medium" styles
+     * are omitted according to the specification.
+     * If a Format does not match to a pre-defined style, it will provide the
+     * {@code SubformatPattern}, if the Format class can provide one. The
+     * following subformats do not provide a {@code SubformatPattern}:
+     * CompactNumberFormat, ListFormat, and DateTimeFormatter (ClassicFormat).
+     *
+     * <p>In addition, since DateTimeFormatter and ClassicFormat do not implement {@code equals()},
+     * there is not a means to compare {@code fmt} to a ClassicFormat for equality,
+     * and thus we don't have enough info to represent it as a pattern since there is no way to check
+     * if {@code fmt} is equal to some, (for example, "long" style) pre-defined ClassicFormat.
+     * Even if ClassicFormat implemented equals(), it is a wrapper class for
+     * DateTimeFormatter, which would require DTF to implement equals() as well to effectively
+     * compare the two ClassicFormats.
+     */
+    private String patternFromFormat(Format fmt) {
+        if (fmt instanceof NumberFormat nFmt) {
+            // Check nFmt factory instances
+            String nStyle = NumberFormat.matchToStyle(nFmt, locale);
+            if (nStyle != null) {
+                return ",number" + (nStyle.isEmpty() ? nStyle : "," + nStyle);
+            }
+            // Check SubformatPattern
+            if (fmt instanceof DecimalFormat dFmt) {
+                // Quote eligible mFmt pattern characters: '{' and '}'
+                // Here, and in other subformatPattern instances
+                return ",number," + copyAndQuoteBraces(dFmt.toPattern());
+            } else if (fmt instanceof ChoiceFormat cFmt) {
+                return ",choice," + copyAndQuoteBraces(cFmt.toPattern());
+            }
+        } else if (fmt instanceof DateFormat) {
+            // Check dFmt factory instances
+            for (DateFormat.Style style : DateFormat.Style.values()) {
+                if (fmt.equals(DateFormat.getDateInstance(style.getValue(), locale))) {
+                    return ",date" + ((style.getValue() != DateFormat.DEFAULT)
+                            ? "," + style.name().toLowerCase(Locale.ROOT) : "");
+                }
+                if (fmt.equals(DateFormat.getTimeInstance(style.getValue(), locale))) {
+                    return ",time" + ((style.getValue() != DateFormat.DEFAULT)
+                            ? "," + style.name().toLowerCase(Locale.ROOT) : "");
+                }
+            }
+            // Check SubformatPattern
+            if (fmt instanceof SimpleDateFormat sdFmt) {
+                return ",date," + copyAndQuoteBraces(sdFmt.toPattern());
+            }
+        } else if (fmt instanceof ListFormat) {
+            // Check lFmt factory instances
+            for (ListFormat.Type type : ListFormat.Type.values()) {
+                if (fmt.equals(ListFormat.getInstance(locale, type, ListFormat.Style.FULL))) {
+                    return ",list" + ((type != ListFormat.Type.STANDARD)
+                            ? "," + type.name().toLowerCase(Locale.ROOT) : "");
+                }
+            }
+        }
+        // By here, this is an instanceof Format that is unknown to MessageFormat.
+        // Since it is unknown, nothing can be done.
+        return "";
+    }
+
+    /**
      * Sets the formats to use for the values passed into
-     * <code>format</code> methods or returned from <code>parse</code>
-     * methods. The indices of elements in <code>newFormats</code>
+     * {@code format} methods or returned from {@code parse}
+     * methods. The indices of elements in {@code newFormats}
      * correspond to the argument indices used in the previously set
      * pattern string.
-     * The order of formats in <code>newFormats</code> thus corresponds to
-     * the order of elements in the <code>arguments</code> array passed
-     * to the <code>format</code> methods or the result array returned
-     * by the <code>parse</code> methods.
+     * The order of formats in {@code newFormats} thus corresponds to
+     * the order of elements in the {@code arguments} array passed
+     * to the {@code format} methods or the result array returned
+     * by the {@code parse} methods.
      * <p>
      * If an argument index is used for more than one format element
      * in the pattern string, then the corresponding new format is used
@@ -614,10 +805,10 @@ public class MessageFormat extends Format {
      * for any format element in the pattern string, then the
      * corresponding new format is ignored. If fewer formats are provided
      * than needed, then only the formats for argument indices less
-     * than <code>newFormats.length</code> are replaced.
+     * than {@code newFormats.length} are replaced.
      *
      * @param newFormats the new formats to use
-     * @exception NullPointerException if <code>newFormats</code> is null
+     * @throws    NullPointerException if {@code newFormats} is null
      * @since 1.4
      */
     public void setFormatsByArgumentIndex(Format[] newFormats) {
@@ -632,33 +823,32 @@ public class MessageFormat extends Format {
     /**
      * Sets the formats to use for the format elements in the
      * previously set pattern string.
-     * The order of formats in <code>newFormats</code> corresponds to
+     * The order of formats in {@code newFormats} corresponds to
      * the order of format elements in the pattern string.
      * <p>
      * If more formats are provided than needed by the pattern string,
      * the remaining ones are ignored. If fewer formats are provided
-     * than needed, then only the first <code>newFormats.length</code>
+     * than needed, then only the first {@code newFormats.length}
      * formats are replaced.
      * <p>
      * Since the order of format elements in a pattern string often
      * changes during localization, it is generally better to use the
      * {@link #setFormatsByArgumentIndex setFormatsByArgumentIndex}
      * method, which assumes an order of formats corresponding to the
-     * order of elements in the <code>arguments</code> array passed to
-     * the <code>format</code> methods or the result array returned by
-     * the <code>parse</code> methods.
+     * order of elements in the {@code arguments} array passed to
+     * the {@code format} methods or the result array returned by
+     * the {@code parse} methods.
      *
      * @param newFormats the new formats to use
-     * @exception NullPointerException if <code>newFormats</code> is null
+     * @throws    NullPointerException if {@code newFormats} is null
      */
     public void setFormats(Format[] newFormats) {
         int runsToCopy = newFormats.length;
         if (runsToCopy > maxOffset + 1) {
             runsToCopy = maxOffset + 1;
         }
-        for (int i = 0; i < runsToCopy; i++) {
-            formats[i] = newFormats[i];
-        }
+        if (runsToCopy >= 0)
+            System.arraycopy(newFormats, 0, formats, 0, runsToCopy);
     }
 
     /**
@@ -666,9 +856,9 @@ public class MessageFormat extends Format {
      * previously set pattern string that use the given argument
      * index.
      * The argument index is part of the format element definition and
-     * represents an index into the <code>arguments</code> array passed
-     * to the <code>format</code> methods or the result array returned
-     * by the <code>parse</code> methods.
+     * represents an index into the {@code arguments} array passed
+     * to the {@code format} methods or the result array returned
+     * by the {@code parse} methods.
      * <p>
      * If the argument index is used for more than one format element
      * in the pattern string, then the new format is used for all such
@@ -701,7 +891,7 @@ public class MessageFormat extends Format {
      *
      * @param formatElementIndex the index of a format element within the pattern
      * @param newFormat the format to use for the specified format element
-     * @exception ArrayIndexOutOfBoundsException if {@code formatElementIndex} is equal to or
+     * @throws    ArrayIndexOutOfBoundsException if {@code formatElementIndex} is equal to or
      *            larger than the number of format elements in the pattern string
      */
     public void setFormat(int formatElementIndex, Format newFormat) {
@@ -714,14 +904,14 @@ public class MessageFormat extends Format {
 
     /**
      * Gets the formats used for the values passed into
-     * <code>format</code> methods or returned from <code>parse</code>
+     * {@code format} methods or returned from {@code parse}
      * methods. The indices of elements in the returned array
      * correspond to the argument indices used in the previously set
      * pattern string.
      * The order of formats in the returned array thus corresponds to
-     * the order of elements in the <code>arguments</code> array passed
-     * to the <code>format</code> methods or the result array returned
-     * by the <code>parse</code> methods.
+     * the order of elements in the {@code arguments} array passed
+     * to the {@code format} methods or the result array returned
+     * by the {@code parse} methods.
      * <p>
      * If an argument index is used for more than one format element
      * in the pattern string, then the format used for the last such
@@ -756,9 +946,9 @@ public class MessageFormat extends Format {
      * changes during localization, it's generally better to use the
      * {@link #getFormatsByArgumentIndex getFormatsByArgumentIndex}
      * method, which assumes an order of formats corresponding to the
-     * order of elements in the <code>arguments</code> array passed to
-     * the <code>format</code> methods or the result array returned by
-     * the <code>parse</code> methods.
+     * order of elements in the {@code arguments} array passed to
+     * the {@code format} methods or the result array returned by
+     * the {@code parse} methods.
      *
      * @return the formats used for the format elements in the pattern
      */
@@ -769,19 +959,19 @@ public class MessageFormat extends Format {
     }
 
     /**
-     * Formats an array of objects and appends the <code>MessageFormat</code>'s
+     * Formats an array of objects and appends the {@code MessageFormat}'s
      * pattern, with format elements replaced by the formatted objects, to the
-     * provided <code>StringBuffer</code>.
+     * provided {@code StringBuffer}.
      * <p>
      * The text substituted for the individual format elements is derived from
      * the current subformat of the format element and the
-     * <code>arguments</code> element at the format element's argument index
+     * {@code arguments} element at the format element's argument index
      * as indicated by the first matching line of the following table. An
-     * argument is <i>unavailable</i> if <code>arguments</code> is
-     * <code>null</code> or has fewer than argumentIndex+1 elements.
+     * argument is <i>unavailable</i> if {@code arguments} is
+     * {@code null} or has fewer than argumentIndex+1 elements.
      *
      * <table class="plain">
-     * <caption style="display:none">Examples of subformat,argument,and formatted text</caption>
+     * <caption style="display:none">Examples of subformat, argument, and formatted text</caption>
      * <thead>
      *    <tr>
      *       <th scope="col">Subformat
@@ -790,62 +980,66 @@ public class MessageFormat extends Format {
      * </thead>
      * <tbody>
      *    <tr>
-     *       <th scope="row" style="text-weight-normal" rowspan=2><i>any</i>
-     *       <th scope="row" style="text-weight-normal"><i>unavailable</i>
+     *       <th scope="row" style="font-weight:normal" rowspan=2><i>any</i>
+     *       <th scope="row" style="font-weight:normal"><i>unavailable</i>
      *       <td><code>"{" + argumentIndex + "}"</code>
      *    <tr>
-     *       <th scope="row" style="text-weight-normal"><code>null</code>
-     *       <td><code>"null"</code>
+     *       <th scope="row" style="font-weight:normal">{@code null}
+     *       <td>{@code "null"}
      *    <tr>
-     *       <th scope="row" style="text-weight-normal"><code>instanceof ChoiceFormat</code>
-     *       <th scope="row" style="text-weight-normal"><i>any</i>
+     *       <th scope="row" style="font-weight:normal">{@code instanceof ChoiceFormat}
+     *       <th scope="row" style="font-weight:normal"><i>any</i>
      *       <td><code>subformat.format(argument).indexOf('{') &gt;= 0 ?<br>
      *           (new MessageFormat(subformat.format(argument), getLocale())).format(argument) :
      *           subformat.format(argument)</code>
      *    <tr>
-     *       <th scope="row" style="text-weight-normal"><code>!= null</code>
-     *       <th scope="row" style="text-weight-normal"><i>any</i>
-     *       <td><code>subformat.format(argument)</code>
+     *       <th scope="row" style="font-weight:normal">{@code != null}
+     *       <th scope="row" style="font-weight:normal"><i>any</i>
+     *       <td>{@code subformat.format(argument)}
      *    <tr>
-     *       <th scope="row" style="text-weight-normal" rowspan=4><code>null</code>
-     *       <th scope="row" style="text-weight-normal"><code>instanceof Number</code>
-     *       <td><code>NumberFormat.getInstance(getLocale()).format(argument)</code>
+     *       <th scope="row" style="font-weight:normal" rowspan=4>{@code null}
+     *       <th scope="row" style="font-weight:normal">{@code instanceof Number}
+     *       <td>{@code NumberFormat.getInstance(getLocale()).format(argument)}
      *    <tr>
-     *       <th scope="row" style="text-weight-normal"><code>instanceof Date</code>
-     *       <td><code>DateFormat.getDateTimeInstance(DateFormat.SHORT, DateFormat.SHORT, getLocale()).format(argument)</code>
+     *       <th scope="row" style="font-weight:normal">{@code instanceof Date}
+     *       <td>{@code DateFormat.getDateTimeInstance(DateFormat.SHORT, DateFormat.SHORT, getLocale()).format(argument)}
      *    <tr>
-     *       <th scope="row" style="text-weight-normal"><code>instanceof String</code>
-     *       <td><code>argument</code>
+     *       <th scope="row" style="font-weight:normal">{@code instanceof String}
+     *       <td>{@code argument}
      *    <tr>
-     *       <th scope="row" style="text-weight-normal"><i>any</i>
-     *       <td><code>argument.toString()</code>
+     *       <th scope="row" style="font-weight:normal"><i>any</i>
+     *       <td>{@code argument.toString()}
      * </tbody>
      * </table>
      * <p>
-     * If <code>pos</code> is non-null, and refers to
-     * <code>Field.ARGUMENT</code>, the location of the first formatted
+     * If {@code pos} is non-null, and refers to
+     * {@code Field.ARGUMENT}, the location of the first formatted
      * string will be returned.
      *
      * @param arguments an array of objects to be formatted and substituted.
      * @param result where text is appended.
      * @param pos keeps track on the position of the first replaced argument
-                  in the output string.
+     *            in the output string.
      * @return the string buffer passed in as {@code result}, with formatted
      * text appended
-     * @exception IllegalArgumentException if an argument in the
-     *            <code>arguments</code> array is not of the type
+     * @throws    IllegalArgumentException if an argument in the
+     *            {@code arguments} array is not of the type
      *            expected by the format element(s) that use it.
-     * @exception NullPointerException if {@code result} is {@code null}
+     * @throws    NullPointerException if {@code result} is {@code null} or
+     *            if the {@code MessageFormat} instance that calls this method
+     *            has locale set to null, and the implementation
+     *            uses a locale-dependent subformat.
      */
     public final StringBuffer format(@Nullable Object @Nullable [] arguments, StringBuffer result,
                                      @Nullable FieldPosition pos)
     {
-        return subformat(arguments, result, pos, null);
+        return subformat(arguments, StringBufFactory.of(result), pos, null).asStringBuffer();
     }
 
     /**
      * Creates a MessageFormat with the given pattern and uses it
-     * to format the given arguments. This is equivalent to
+     * to format the given arguments.
+     * This method returns a string that would be equal to the string returned by
      * <blockquote>
      *     <code>(new {@link #MessageFormat(String) MessageFormat}(pattern)).{@link #format(java.lang.Object[], java.lang.StringBuffer, java.text.FieldPosition) format}(arguments, new StringBuffer(), null).toString()</code>
      * </blockquote>
@@ -853,11 +1047,11 @@ public class MessageFormat extends Format {
      * @param pattern   the pattern string
      * @param arguments object(s) to format
      * @return the formatted string
-     * @exception IllegalArgumentException if the pattern is invalid,
-     *            or if an argument in the <code>arguments</code> array
+     * @throws    IllegalArgumentException if the pattern is invalid,
+     *            or if an argument in the {@code arguments} array
      *            is not of the type expected by the format element(s)
      *            that use it.
-     * @exception NullPointerException if {@code pattern} is {@code null}
+     * @throws    NullPointerException if {@code pattern} is {@code null}
      */
     public static String format( String pattern, @Nullable Object ... arguments) {
         MessageFormat temp = new MessageFormat(pattern);
@@ -866,9 +1060,9 @@ public class MessageFormat extends Format {
 
     // Overrides
     /**
-     * Formats an array of objects and appends the <code>MessageFormat</code>'s
+     * Formats an array of objects and appends the {@code MessageFormat}'s
      * pattern, with format elements replaced by the formatted objects, to the
-     * provided <code>StringBuffer</code>.
+     * provided {@code StringBuffer}.
      * This is equivalent to
      * <blockquote>
      *     <code>{@link #format(java.lang.Object[], java.lang.StringBuffer, java.text.FieldPosition) format}((Object[]) arguments, result, pos)</code>
@@ -878,67 +1072,72 @@ public class MessageFormat extends Format {
      * @param result where text is appended.
      * @param pos keeps track on the position of the first replaced argument
      *            in the output string.
-     * @exception IllegalArgumentException if an argument in the
-     *            <code>arguments</code> array is not of the type
+     * @throws    IllegalArgumentException if an argument in the
+     *            {@code arguments} array is not of the type
      *            expected by the format element(s) that use it.
-     * @exception NullPointerException if {@code result} is {@code null}
+     * @throws    NullPointerException if {@code result} is {@code null} or
+     *            if the {@code MessageFormat} instance that calls this method
+     *            has locale set to null, and the implementation
+     *            uses a locale-dependent subformat.
      */
     public final StringBuffer format(Object arguments, StringBuffer result,
                                      FieldPosition pos)
     {
+        return subformat((Object[]) arguments, StringBufFactory.of(result), pos, null).asStringBuffer();
+    }
+
+    @Override
+    final StringBuf format(Object arguments, StringBuf result,
+                           FieldPosition pos) {
         return subformat((Object[]) arguments, result, pos, null);
     }
 
     /**
      * Formats an array of objects and inserts them into the
-     * <code>MessageFormat</code>'s pattern, producing an
-     * <code>AttributedCharacterIterator</code>.
-     * You can use the returned <code>AttributedCharacterIterator</code>
+     * {@code MessageFormat}'s pattern, producing an
+     * {@code AttributedCharacterIterator}.
+     * You can use the returned {@code AttributedCharacterIterator}
      * to build the resulting String, as well as to determine information
      * about the resulting String.
      * <p>
-     * The text of the returned <code>AttributedCharacterIterator</code> is
+     * The text of the returned {@code AttributedCharacterIterator} is
      * the same that would be returned by
      * <blockquote>
      *     <code>{@link #format(java.lang.Object[], java.lang.StringBuffer, java.text.FieldPosition) format}(arguments, new StringBuffer(), null).toString()</code>
      * </blockquote>
      * <p>
-     * In addition, the <code>AttributedCharacterIterator</code> contains at
+     * In addition, the {@code AttributedCharacterIterator} contains at
      * least attributes indicating where text was generated from an
-     * argument in the <code>arguments</code> array. The keys of these attributes are of
-     * type <code>MessageFormat.Field</code>, their values are
-     * <code>Integer</code> objects indicating the index in the <code>arguments</code>
+     * argument in the {@code arguments} array. The keys of these attributes are of
+     * type {@code MessageFormat.Field}, their values are
+     * {@code Integer} objects indicating the index in the {@code arguments}
      * array of the argument from which the text was generated.
      * <p>
-     * The attributes/value from the underlying <code>Format</code>
-     * instances that <code>MessageFormat</code> uses will also be
-     * placed in the resulting <code>AttributedCharacterIterator</code>.
+     * The attributes/value from the underlying {@code Format}
+     * instances that {@code MessageFormat} uses will also be
+     * placed in the resulting {@code AttributedCharacterIterator}.
      * This allows you to not only find where an argument is placed in the
      * resulting String, but also which fields it contains in turn.
      *
      * @param arguments an array of objects to be formatted and substituted.
      * @return AttributedCharacterIterator describing the formatted value.
-     * @exception NullPointerException if <code>arguments</code> is null.
-     * @exception IllegalArgumentException if an argument in the
-     *            <code>arguments</code> array is not of the type
+     * @throws    NullPointerException if {@code arguments} is null.
+     * @throws    IllegalArgumentException if an argument in the
+     *            {@code arguments} array is not of the type
      *            expected by the format element(s) that use it.
      * @since 1.4
      */
     public AttributedCharacterIterator formatToCharacterIterator(Object arguments) {
-        StringBuffer result = new StringBuffer();
+        Objects.requireNonNull(arguments, "arguments must not be null");
+        StringBuf result = StringBufFactory.of();
         ArrayList<AttributedCharacterIterator> iterators = new ArrayList<>();
 
-        if (arguments == null) {
-            throw new NullPointerException(
-                   "formatToCharacterIterator must be passed non-null object");
-        }
         subformat((Object[]) arguments, result, null, iterators);
         if (iterators.size() == 0) {
             return createAttributedCharacterIterator("");
         }
         return createAttributedCharacterIterator(
-                     iterators.toArray(
-                     new AttributedCharacterIterator[iterators.size()]));
+                iterators.toArray(new AttributedCharacterIterator[0]));
     }
 
     /**
@@ -971,7 +1170,7 @@ public class MessageFormat extends Format {
      * @param source the string to parse
      * @param pos    the parse position
      * @return an array of parsed objects
-     * @exception NullPointerException if {@code pos} is {@code null}
+     * @throws    NullPointerException if {@code pos} is {@code null}
      *            for a non-null {@code source} string.
      */
     public Object[] parse(@Nullable String source, ParsePosition pos) {
@@ -1023,7 +1222,7 @@ public class MessageFormat extends Format {
                     return null; // leave index as is to signal error
                 } else {
                     String strValue= source.substring(sourceOffset,next);
-                    if (!strValue.equals("{"+argumentNumbers[i]+"}"))
+                    if (!strValue.equals("{" + argumentNumbers[i] + "}"))
                         resultArray[argumentNumbers[i]]
                             = source.substring(sourceOffset,next);
                     sourceOffset = next;
@@ -1058,9 +1257,9 @@ public class MessageFormat extends Format {
      * See the {@link #parse(String, ParsePosition)} method for more information
      * on message parsing.
      *
-     * @param source A <code>String</code> whose beginning should be parsed.
-     * @return An <code>Object</code> array parsed from the string.
-     * @exception ParseException if the beginning of the specified string
+     * @param source A {@code String} whose beginning should be parsed.
+     * @return An {@code Object} array parsed from the string.
+     * @throws    ParseException if the beginning of the specified string
      *            cannot be parsed.
      */
     public Object[] parse(String source) throws ParseException {
@@ -1076,23 +1275,23 @@ public class MessageFormat extends Format {
      * Parses text from a string to produce an object array.
      * <p>
      * The method attempts to parse text starting at the index given by
-     * <code>pos</code>.
-     * If parsing succeeds, then the index of <code>pos</code> is updated
+     * {@code pos}.
+     * If parsing succeeds, then the index of {@code pos} is updated
      * to the index after the last character used (parsing does not necessarily
      * use all characters up to the end of the string), and the parsed
-     * object array is returned. The updated <code>pos</code> can be used to
+     * object array is returned. The updated {@code pos} can be used to
      * indicate the starting point for the next call to this method.
-     * If an error occurs, then the index of <code>pos</code> is not
-     * changed, the error index of <code>pos</code> is set to the index of
+     * If an error occurs, then the index of {@code pos} is not
+     * changed, the error index of {@code pos} is set to the index of
      * the character where the error occurred, and null is returned.
      * <p>
      * See the {@link #parse(String, ParsePosition)} method for more information
      * on message parsing.
      *
-     * @param source A <code>String</code>, part of which should be parsed.
-     * @param pos A <code>ParsePosition</code> object with index and error
+     * @param source A {@code String}, part of which should be parsed.
+     * @param pos A {@code ParsePosition} object with index and error
      *            index information as described above.
-     * @return An <code>Object</code> array parsed from the string. In case of
+     * @return An {@code Object} array parsed from the string. In case of
      *         error, returns null.
      * @throws NullPointerException if {@code pos} is null.
      */
@@ -1122,10 +1321,19 @@ public class MessageFormat extends Format {
     }
 
     /**
-     * Equality comparison between two message format objects
+     * Compares the specified object with this {@code MessageFormat} for equality.
+     * Returns true if the object is also a {@code MessageFormat} and the
+     * two formats would format any value the same.
+     *
+     * @implSpec This method performs an equality check with a notion of class
+     * identity based on {@code getClass()}, rather than {@code instanceof}.
+     * Therefore, in the equals methods in subclasses, no instance of this class
+     * should compare as equal to an instance of a subclass.
+     * @param  obj object to be compared for equality
+     * @return {@code true} if the specified object is equal to this {@code MessageFormat}
+     * @see Object#equals(Object)
      */
-    
-    
+    @Override
     public boolean equals(@Nullable Object obj) {
         if (this == obj)                      // quick check
             return true;
@@ -1134,31 +1342,47 @@ public class MessageFormat extends Format {
         MessageFormat other = (MessageFormat) obj;
         return (maxOffset == other.maxOffset
                 && pattern.equals(other.pattern)
-                && ((locale != null && locale.equals(other.locale))
-                 || (locale == null && other.locale == null))
+                && Objects.equals(locale,other.locale)
                 && Arrays.equals(offsets,other.offsets)
                 && Arrays.equals(argumentNumbers,other.argumentNumbers)
                 && Arrays.equals(formats,other.formats));
     }
 
     /**
-     * Generates a hash code for the message format object.
+     * {@return the hash code value for this {@code MessageFormat}}
+     *
+     * @implSpec This method calculates the hash code value using the value returned by
+     * {@link #toPattern()}.
+     * @see Object#hashCode()
      */
+    @Override
     public int hashCode() {
         return pattern.hashCode(); // enough for reasonable distribution
+    }
+
+    /**
+     * {@return a string identifying this {@code MessageFormat}, for debugging}
+     */
+    @Override
+    public String toString() {
+        return
+            """
+            MessageFormat [locale: %s, pattern: "%s"]
+            """.formatted(locale == null ? null : '"' + locale.getDisplayName() + '"', toPattern());
     }
 
 
     /**
      * Defines constants that are used as attribute keys in the
-     * <code>AttributedCharacterIterator</code> returned
-     * from <code>MessageFormat.formatToCharacterIterator</code>.
+     * {@code AttributedCharacterIterator} returned
+     * from {@code MessageFormat.formatToCharacterIterator}.
      *
      * @since 1.4
      */
     public static class Field extends Format.Field {
 
         // Proclaim serial compatibility with 1.4 FCS
+        @java.io.Serial
         private static final long serialVersionUID = 7899943957617360810L;
 
         /**
@@ -1177,6 +1401,7 @@ public class MessageFormat extends Format {
          *         resolved.
          * @return resolved MessageFormat.Field constant
          */
+        @java.io.Serial
         protected Object readResolve() throws InvalidObjectException {
             if (this.getClass() != MessageFormat.Field.class) {
                 throw new InvalidObjectException("subclass didn't correctly implement readResolve");
@@ -1191,9 +1416,9 @@ public class MessageFormat extends Format {
 
         /**
          * Constant identifying a portion of a message that was generated
-         * from an argument passed into <code>formatToCharacterIterator</code>.
-         * The value associated with the key will be an <code>Integer</code>
-         * indicating the index in the <code>arguments</code> array of the
+         * from an argument passed into {@code formatToCharacterIterator}.
+         * The value associated with the key will be an {@code Integer}
+         * indicating the index in the {@code arguments} array of the
          * argument from which the text was generated.
          */
         public static final Field ARGUMENT =
@@ -1240,9 +1465,9 @@ public class MessageFormat extends Format {
     private int[] argumentNumbers = new int[INITIAL_FORMATS];
 
     /**
-     * One less than the number of entries in <code>offsets</code>.  Can also be thought of
-     * as the index of the highest-numbered element in <code>offsets</code> that is being used.
-     * All of these arrays should have the same number of elements being used as <code>offsets</code>
+     * One less than the number of entries in {@code offsets}.  Can also be thought of
+     * as the index of the highest-numbered element in {@code offsets} that is being used.
+     * All of these arrays should have the same number of elements being used as {@code offsets}
      * does, and so this variable suffices to tell us how many entries are in all of them.
      * @serial
      */
@@ -1256,11 +1481,11 @@ public class MessageFormat extends Format {
      * {@code Field.ARGUMENT} as the field attribute, the location of
      * the first replaced argument will be set in it.
      *
-     * @exception IllegalArgumentException if an argument in the
-     *            <code>arguments</code> array is not of the type
+     * @throws    IllegalArgumentException if an argument in the
+     *            {@code arguments} array is not of the type
      *            expected by the format element(s) that use it.
      */
-    private StringBuffer subformat(@Nullable Object @Nullable [] arguments, StringBuffer result,
+    private StringBuf subformat(Object[] arguments, StringBuf result,
                                    FieldPosition fp, List<AttributedCharacterIterator> characterIterators) {
         // note: this implementation assumes a fast substring & index.
         // if this is not true, would be better to append chars one by one.
@@ -1336,7 +1561,7 @@ public class MessageFormat extends Format {
                         }
                         arg = null;
                     }
-                    if (arg != null && arg.length() > 0) {
+                    if (arg != null && !arg.isEmpty()) {
                         result.append(arg);
                         characterIterators.add(
                                  createAttributedCharacterIterator(
@@ -1370,9 +1595,9 @@ public class MessageFormat extends Format {
 
     /**
      * Convenience method to append all the characters in
-     * <code>iterator</code> to the StringBuffer <code>result</code>.
+     * {@code iterator} to the StringBuf {@code result}.
      */
-    private void append(StringBuffer result, CharacterIterator iterator) {
+    private void append(StringBuf result, CharacterIterator iterator) {
         if (iterator.first() != CharacterIterator.DONE) {
             char aChar;
 
@@ -1384,65 +1609,21 @@ public class MessageFormat extends Format {
     }
 
     // Indices for segments
-    private static final int SEG_RAW      = 0;
-    private static final int SEG_INDEX    = 1;
-    private static final int SEG_TYPE     = 2;
-    private static final int SEG_MODIFIER = 3; // modifier or subformat
+    private static final int SEG_RAW      = 0; // String in MessageFormatPattern
+    private static final int SEG_INDEX    = 1; // ArgumentIndex
+    private static final int SEG_TYPE     = 2; // FormatType
+    private static final int SEG_MODIFIER = 3; // FormatStyle
 
-    // Indices for type keywords
-    private static final int TYPE_NULL    = 0;
-    private static final int TYPE_NUMBER  = 1;
-    private static final int TYPE_DATE    = 2;
-    private static final int TYPE_TIME    = 3;
-    private static final int TYPE_CHOICE  = 4;
+    /**
+     * This method sets a Format in the {@code formats} array for the
+     * corresponding {@code argumentNumber} based on the pattern supplied.
+     * If the pattern supplied does not contain a {@code FormatType}, null
+     * is stored in the {@code formats} array.
+     */
+    private void setFormatFromPattern(int position, int offsetNumber,
+                            StringBuilder[] textSegments) {
 
-    private static final String[] TYPE_KEYWORDS = {
-        "",
-        "number",
-        "date",
-        "time",
-        "choice"
-    };
-
-    // Indices for number modifiers
-    private static final int MODIFIER_DEFAULT  = 0; // common in number and date-time
-    private static final int MODIFIER_CURRENCY = 1;
-    private static final int MODIFIER_PERCENT  = 2;
-    private static final int MODIFIER_INTEGER  = 3;
-
-    private static final String[] NUMBER_MODIFIER_KEYWORDS = {
-        "",
-        "currency",
-        "percent",
-        "integer"
-    };
-
-    // Indices for date-time modifiers
-    private static final int MODIFIER_SHORT   = 1;
-    private static final int MODIFIER_MEDIUM  = 2;
-    private static final int MODIFIER_LONG    = 3;
-    private static final int MODIFIER_FULL    = 4;
-
-    private static final String[] DATE_TIME_MODIFIER_KEYWORDS = {
-        "",
-        "short",
-        "medium",
-        "long",
-        "full"
-    };
-
-    // Date-time style values corresponding to the date-time modifiers.
-    private static final int[] DATE_TIME_MODIFIERS = {
-        DateFormat.DEFAULT,
-        DateFormat.SHORT,
-        DateFormat.MEDIUM,
-        DateFormat.LONG,
-        DateFormat.FULL,
-    };
-
-    private void makeFormat(int position, int offsetNumber,
-                            StringBuilder[] textSegments)
-    {
+        // Convert any null values in textSegments to empty string
         String[] segments = new String[textSegments.length];
         for (int i = 0; i < textSegments.length; i++) {
             StringBuilder oneseg = textSegments[i];
@@ -1475,108 +1656,209 @@ public class MessageFormat extends Format {
             offsets = newOffsets;
             argumentNumbers = newArgumentNumbers;
         }
+
         int oldMaxOffset = maxOffset;
         maxOffset = offsetNumber;
         offsets[offsetNumber] = segments[SEG_RAW].length();
         argumentNumbers[offsetNumber] = argumentNumber;
 
-        // now get the format
-        Format newFormat = null;
-        if (segments[SEG_TYPE].length() != 0) {
-            int type = findKeyword(segments[SEG_TYPE], TYPE_KEYWORDS);
-            switch (type) {
-            case TYPE_NULL:
-                // Type "" is allowed. e.g., "{0,}", "{0,,}", and "{0,,#}"
-                // are treated as "{0}".
-                break;
-
-            case TYPE_NUMBER:
-                switch (findKeyword(segments[SEG_MODIFIER], NUMBER_MODIFIER_KEYWORDS)) {
-                case MODIFIER_DEFAULT:
-                    newFormat = NumberFormat.getInstance(locale);
-                    break;
-                case MODIFIER_CURRENCY:
-                    newFormat = NumberFormat.getCurrencyInstance(locale);
-                    break;
-                case MODIFIER_PERCENT:
-                    newFormat = NumberFormat.getPercentInstance(locale);
-                    break;
-                case MODIFIER_INTEGER:
-                    newFormat = NumberFormat.getIntegerInstance(locale);
-                    break;
-                default: // DecimalFormat pattern
-                    try {
-                        newFormat = new DecimalFormat(segments[SEG_MODIFIER],
-                                                      DecimalFormatSymbols.getInstance(locale));
-                    } catch (IllegalArgumentException e) {
-                        maxOffset = oldMaxOffset;
-                        throw e;
-                    }
-                    break;
-                }
-                break;
-
-            case TYPE_DATE:
-            case TYPE_TIME:
-                int mod = findKeyword(segments[SEG_MODIFIER], DATE_TIME_MODIFIER_KEYWORDS);
-                if (mod >= 0 && mod < DATE_TIME_MODIFIER_KEYWORDS.length) {
-                    if (type == TYPE_DATE) {
-                        newFormat = DateFormat.getDateInstance(DATE_TIME_MODIFIERS[mod],
-                                                               locale);
-                    } else {
-                        newFormat = DateFormat.getTimeInstance(DATE_TIME_MODIFIERS[mod],
-                                                               locale);
-                    }
-                } else {
-                    // SimpleDateFormat pattern
-                    try {
-                        newFormat = new SimpleDateFormat(segments[SEG_MODIFIER], locale);
-                    } catch (IllegalArgumentException e) {
-                        maxOffset = oldMaxOffset;
-                        throw e;
-                    }
-                }
-                break;
-
-            case TYPE_CHOICE:
-                try {
-                    // ChoiceFormat pattern
-                    newFormat = new ChoiceFormat(segments[SEG_MODIFIER]);
-                } catch (Exception e) {
-                    maxOffset = oldMaxOffset;
-                    throw new IllegalArgumentException("Choice Pattern incorrect: "
-                                                       + segments[SEG_MODIFIER], e);
-                }
-                break;
-
-            default:
+        // Only search for corresponding type/style if type is not empty
+        if (!segments[SEG_TYPE].isEmpty()) {
+            try {
+                formats[offsetNumber] = formatFromPattern(segments[SEG_TYPE], segments[SEG_MODIFIER]);
+            } catch (Exception e) {
+                // Catch to reset maxOffset
                 maxOffset = oldMaxOffset;
-                throw new IllegalArgumentException("unknown format type: " +
-                                                   segments[SEG_TYPE]);
+                throw e;
             }
+        } else {
+            // Type "" is allowed. e.g., "{0,}", "{0,,}", and "{0,,#}"
+            // are treated as "{0}".
+            formats[offsetNumber] = null;
         }
-        formats[offsetNumber] = newFormat;
     }
 
-    private static final int findKeyword(String s, String[] list) {
-        for (int i = 0; i < list.length; ++i) {
-            if (s.equals(list[i]))
-                return i;
+    /**
+     * This method converts a {@code FormatType} and {@code FormatStyle} to a
+     * {@code Format} value. The String parameters are converted
+     * to their corresponding enum values FormatType and FormatStyle which are used
+     * to return a {@code Format}. See the patterns section in the class
+     * description for further detail on a MessageFormat pattern.
+     *
+     * @param type the {@code FormatType} in {@code FormatElement}
+     * @param style the {@code FormatStyle} in {@code FormatElement}
+     * @return a Format that corresponds to the corresponding {@code formatType}
+     *         and {@code formatStyle}
+     * @throws IllegalArgumentException if a Format cannot be produced from the
+     *         type and style provided
+     */
+    private Format formatFromPattern(String type, String style) {
+        // Get the type, if it's valid
+        FormatType fType;
+        try {
+            fType = FormatType.valueOf(type.trim().toUpperCase(Locale.ROOT));
+        } catch (IllegalArgumentException iae) {
+            // Invalid type throws exception
+            throw new IllegalArgumentException("unknown format type: " + type);
         }
-
-        // Try trimmed lowercase.
-        String ls = s.trim().toLowerCase(Locale.ROOT);
-        if (ls != s) {
-            for (int i = 0; i < list.length; ++i) {
-                if (ls.equals(list[i]))
-                    return i;
-            }
+        // Get the style if recognized, otherwise treat style as a SubformatPattern
+        FormatStyle fStyle;
+        try {
+            fStyle = FormatStyle.fromString(style);
+        } catch (IllegalArgumentException iae) {
+            fStyle = FormatStyle.SUBFORMATPATTERN;
         }
-        return -1;
+        return switch (fType) {
+            case NUMBER -> switch (fStyle) {
+                case DEFAULT -> NumberFormat.getInstance(locale);
+                case CURRENCY ->
+                        NumberFormat.getCurrencyInstance(locale);
+                case PERCENT ->
+                        NumberFormat.getPercentInstance(locale);
+                case INTEGER ->
+                        NumberFormat.getIntegerInstance(locale);
+                case COMPACT_SHORT ->
+                        NumberFormat.getCompactNumberInstance(locale, NumberFormat.Style.SHORT);
+                case COMPACT_LONG ->
+                        NumberFormat.getCompactNumberInstance(locale, NumberFormat.Style.LONG);
+                default -> formatFromSubformatPattern(fType, style);
+            };
+            case DATE -> switch (fStyle) {
+                case DEFAULT ->
+                        DateFormat.getDateInstance(DateFormat.DEFAULT, locale);
+                case SHORT ->
+                        DateFormat.getDateInstance(DateFormat.SHORT, locale);
+                case MEDIUM ->
+                        DateFormat.getDateInstance(DateFormat.MEDIUM, locale);
+                case LONG ->
+                        DateFormat.getDateInstance(DateFormat.LONG, locale);
+                case FULL ->
+                        DateFormat.getDateInstance(DateFormat.FULL, locale);
+                default -> formatFromSubformatPattern(fType, style);
+            };
+            case TIME -> switch (fStyle) {
+                case DEFAULT ->
+                        DateFormat.getTimeInstance(DateFormat.DEFAULT, locale);
+                case SHORT ->
+                        DateFormat.getTimeInstance(DateFormat.SHORT, locale);
+                case MEDIUM ->
+                        DateFormat.getTimeInstance(DateFormat.MEDIUM, locale);
+                case LONG ->
+                        DateFormat.getTimeInstance(DateFormat.LONG, locale);
+                case FULL ->
+                        DateFormat.getTimeInstance(DateFormat.FULL, locale);
+                default -> formatFromSubformatPattern(fType, style);
+            };
+            case DTF_DATE -> switch (fStyle) {
+                case DEFAULT, MEDIUM ->
+                        DateTimeFormatter.ofLocalizedDate(java.time.format.FormatStyle.MEDIUM).withLocale(locale).toFormat();
+                case SHORT ->
+                        DateTimeFormatter.ofLocalizedDate(java.time.format.FormatStyle.SHORT).withLocale(locale).toFormat();
+                case LONG ->
+                        DateTimeFormatter.ofLocalizedDate(java.time.format.FormatStyle.LONG).withLocale(locale).toFormat();
+                case FULL ->
+                        DateTimeFormatter.ofLocalizedDate(java.time.format.FormatStyle.FULL).withLocale(locale).toFormat();
+                default -> formatFromSubformatPattern(fType, style);
+            };
+            case DTF_TIME -> switch (fStyle) {
+                case DEFAULT, MEDIUM ->
+                        DateTimeFormatter.ofLocalizedTime(java.time.format.FormatStyle.MEDIUM).withLocale(locale).toFormat();
+                case SHORT ->
+                        DateTimeFormatter.ofLocalizedTime(java.time.format.FormatStyle.SHORT).withLocale(locale).toFormat();
+                case LONG ->
+                        DateTimeFormatter.ofLocalizedTime(java.time.format.FormatStyle.LONG).withLocale(locale).toFormat();
+                case FULL ->
+                        DateTimeFormatter.ofLocalizedTime(java.time.format.FormatStyle.FULL).withLocale(locale).toFormat();
+                default -> formatFromSubformatPattern(fType, style);
+            };
+            case DTF_DATETIME -> switch (fStyle) {
+                case DEFAULT, MEDIUM ->
+                        DateTimeFormatter.ofLocalizedDateTime(java.time.format.FormatStyle.MEDIUM).withLocale(locale).toFormat();
+                case SHORT ->
+                        DateTimeFormatter.ofLocalizedDateTime(java.time.format.FormatStyle.SHORT).withLocale(locale).toFormat();
+                case LONG ->
+                        DateTimeFormatter.ofLocalizedDateTime(java.time.format.FormatStyle.LONG).withLocale(locale).toFormat();
+                case FULL ->
+                        DateTimeFormatter.ofLocalizedDateTime(java.time.format.FormatStyle.FULL).withLocale(locale).toFormat();
+                default -> formatFromSubformatPattern(fType, style);
+            };
+            case CHOICE -> formatFromSubformatPattern(fType, style);
+            case LIST -> switch (fStyle) {
+                case DEFAULT ->
+                        ListFormat.getInstance(locale, ListFormat.Type.STANDARD, ListFormat.Style.FULL);
+                case OR ->
+                        ListFormat.getInstance(locale, ListFormat.Type.OR, ListFormat.Style.FULL);
+                case UNIT ->
+                        ListFormat.getInstance(locale, ListFormat.Type.UNIT, ListFormat.Style.FULL);
+                // ListFormat does not provide a String pattern method/constructor
+                default -> formatFromSubformatPattern(fType, style);
+            };
+            // The DateTimeFormatter constants are only given as a type
+            // Regardless of style, return the corresponding DTF constant
+            case BASIC_ISO_DATE -> DateTimeFormatter.BASIC_ISO_DATE.toFormat();
+            case ISO_LOCAL_DATE -> DateTimeFormatter.ISO_LOCAL_DATE.toFormat();
+            case ISO_OFFSET_DATE -> DateTimeFormatter.ISO_OFFSET_DATE.toFormat();
+            case ISO_DATE -> DateTimeFormatter.ISO_DATE.toFormat();
+            case ISO_LOCAL_TIME -> DateTimeFormatter.ISO_LOCAL_TIME.toFormat();
+            case ISO_OFFSET_TIME -> DateTimeFormatter.ISO_OFFSET_TIME.toFormat();
+            case ISO_TIME -> DateTimeFormatter.ISO_TIME.toFormat();
+            case ISO_LOCAL_DATE_TIME -> DateTimeFormatter.ISO_LOCAL_DATE_TIME.toFormat();
+            case ISO_OFFSET_DATE_TIME -> DateTimeFormatter.ISO_OFFSET_DATE_TIME.toFormat();
+            case ISO_ZONED_DATE_TIME -> DateTimeFormatter.ISO_ZONED_DATE_TIME.toFormat();
+            case ISO_DATE_TIME -> DateTimeFormatter.ISO_DATE_TIME.toFormat();
+            case ISO_ORDINAL_DATE -> DateTimeFormatter.ISO_ORDINAL_DATE.toFormat();
+            case ISO_WEEK_DATE -> DateTimeFormatter.ISO_WEEK_DATE.toFormat();
+            case ISO_INSTANT -> DateTimeFormatter.ISO_INSTANT.toFormat();
+            case RFC_1123_DATE_TIME -> DateTimeFormatter.RFC_1123_DATE_TIME.toFormat();
+        };
     }
 
-    private static final void copyAndFixQuotes(String source, int start, int end,
-                                               StringBuilder target) {
+    /**
+     * This method will attempt to return a subformat produced with the provided
+     * SubformatPattern applied. If the subformat does not support SubformatPatterns
+     * or the SubformatPattern is illegal to the subformat, an IllegalArgumentException
+     * is thrown. To adhere to the specification, this method ensures if an underlying
+     * exception is thrown, it is rethrown as an IllegalArgumentException unless
+     * the underlying exception is itself an IAE, or an NPE.
+     *
+     * @param fType the enum type of the subformat
+     * @param pattern the SubformatPattern to be applied
+     * @return a Format that corresponds to the corresponding {@code fType}
+     *         and {@code pattern}
+     * @throws IllegalArgumentException if a Format cannot be produced from the
+     *         type and SubformatPattern provided
+     */
+    private Format formatFromSubformatPattern(FormatType fType, String pattern) {
+        // Modified for neater exception value if needed
+        String type = fType.name().charAt(0) + fType.name().substring(1).toLowerCase(Locale.ROOT);
+        try {
+            return switch (fType) {
+                case NUMBER -> new DecimalFormat(pattern, DecimalFormatSymbols.getInstance(locale));
+                case DATE, TIME -> new SimpleDateFormat(pattern, locale);
+                case DTF_DATE, DTF_TIME, DTF_DATETIME ->
+                        DateTimeFormatter.ofPattern(pattern).toFormat();
+                case CHOICE -> new ChoiceFormat(pattern);
+                // These classe(s) do not support String patterns
+                default -> throw new IllegalArgumentException(String.format(
+                            "Unexpected modifier for %s: %s", type, pattern));
+            };
+        } catch (Exception e) {
+            // getClass check over separate catch block to not catch the IAE subclasses
+            // For example, ChoiceFormat can throw a NumberFormatException
+            if (e.getClass() == IllegalArgumentException.class
+                    || e.getClass() == NullPointerException.class) {
+                // If IAE no need to wrap with another IAE
+                // If NPE, it should be thrown as is (as specified)
+                throw e;
+            } else {
+                throw new IllegalArgumentException(String.format(
+                        "%s pattern incorrect: %s", type, pattern), e);
+            }
+        }
+    }
+
+    private static void copyAndFixQuotes(String source, int start, int end,
+                                         StringBuilder target) {
         boolean quoted = false;
 
         for (int i = start; i < end; ++i) {
@@ -1602,11 +1884,131 @@ public class MessageFormat extends Format {
         }
     }
 
+    // The subformat pattern comes already quoted, but only for those characters that are
+    // special to the subformat. Therefore, we may need to quote additional characters.
+    // The ones we care about at the MessageFormat level are '{' and '}'.
+    private static String copyAndQuoteBraces(String source) {
+
+        // Analyze existing string for already quoted and newly quotable characters
+        record Qchar(char ch, boolean quoted) { };
+        ArrayList<Qchar> qchars = new ArrayList<>();
+        boolean quoted = false;
+        boolean anyChangeNeeded = false;
+        StringBuilder quotedSource = new StringBuilder();
+        for (int i = 0; i < source.length(); i++) {
+            char ch = source.charAt(i);
+            if (ch == '\'') {
+                if (i + 1 < source.length() && source.charAt(i + 1) == '\'') {
+                    qchars.add(new Qchar('\'', quoted));
+                    i++;
+                } else {
+                    quoted = !quoted;
+                }
+            } else {
+                boolean quotable = ch == '{' || ch == '}';
+                anyChangeNeeded |= quotable && !quoted;
+                qchars.add(new Qchar(ch, quoted || quotable));
+            }
+        }
+
+        // Was any change needed?
+        if (!anyChangeNeeded) {
+            return source;
+        }
+
+        // Build new string, automatically consolidating adjacent runs of quoted chars
+        quoted = false;
+        for (Qchar qchar : qchars) {
+            char ch = qchar.ch;
+            if (ch == '\'') {
+                quotedSource.append(ch);          // doubling works whether quoted or not
+            } else if (qchar.quoted() != quoted) {
+                quotedSource.append('\'');
+                quoted = qchar.quoted();
+            }
+            quotedSource.append(ch);
+        }
+        if (quoted) {
+            quotedSource.append('\'');
+        }
+
+        return quotedSource.toString();
+    }
+
+    // Corresponding to the FormatType pattern
+    private enum FormatType {
+        NUMBER,
+        DATE,
+        TIME,
+        DTF_DATE,
+        DTF_TIME,
+        DTF_DATETIME,
+        CHOICE,
+        LIST,
+
+        // Pre-defined DateTimeFormatter types
+        BASIC_ISO_DATE,
+        ISO_LOCAL_DATE,
+        ISO_OFFSET_DATE ,
+        ISO_DATE,
+        ISO_LOCAL_TIME,
+        ISO_OFFSET_TIME,
+        ISO_TIME,
+        ISO_LOCAL_DATE_TIME,
+        ISO_OFFSET_DATE_TIME,
+        ISO_ZONED_DATE_TIME,
+        ISO_DATE_TIME,
+        ISO_ORDINAL_DATE,
+        ISO_WEEK_DATE,
+        ISO_INSTANT,
+        RFC_1123_DATE_TIME;
+    }
+
+    // Corresponding to the FormatStyle pattern
+    private enum FormatStyle {
+        DEFAULT(""),
+        SHORT("short"),
+        MEDIUM("medium"),
+        LONG("long"),
+        FULL("full"),
+        INTEGER("integer"),
+        CURRENCY("currency"),
+        PERCENT("percent"),
+        COMPACT_SHORT("compact_short"),
+        COMPACT_LONG("compact_long"),
+        OR("or"),
+        UNIT("unit"),
+        SUBFORMATPATTERN(null);
+
+        private final String text;
+
+        // Differs from FormatType in that the text String is
+        // not guaranteed to match the Enum name, thus a text field is used
+        FormatStyle(String text) {
+            this.text = text;
+        }
+
+        // This method returns a FormatStyle (excluding SUBFORMATPATTERN)
+        // that matches the passed String. If no FormatStyle is found,
+        // an IllegalArgumentException is thrown
+        private static FormatStyle fromString(String text) {
+            for (FormatStyle style : values()) {
+                // Also check trimmed case-insensitive for historical reasons
+                if (style != FormatStyle.SUBFORMATPATTERN &&
+                        text.trim().compareToIgnoreCase(style.text) == 0) {
+                    return style;
+                }
+            }
+            throw new IllegalArgumentException();
+        }
+    }
+
     /**
      * After reading an object from the input stream, do a simple verification
      * to maintain class invariants.
      * @throws InvalidObjectException if the objects read from the stream is invalid.
      */
+    @java.io.Serial
     private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
         in.defaultReadObject();
         boolean isValid = maxOffset >= -1
