@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -48,7 +48,7 @@ import javax.lang.model.element.ModuleElement.RequiresDirective;
 import javax.lang.model.element.PackageElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.util.ElementFilter;
-import javax.lang.model.util.SimpleElementVisitor9;
+import javax.lang.model.util.SimpleElementVisitor14;
 import javax.tools.JavaFileManager;
 import javax.tools.JavaFileManager.Location;
 import javax.tools.JavaFileObject;
@@ -68,13 +68,12 @@ import com.sun.tools.javac.main.JavaCompiler;
 import com.sun.tools.javac.tree.JCTree.JCClassDecl;
 import com.sun.tools.javac.tree.JCTree.JCCompilationUnit;
 import com.sun.tools.javac.tree.JCTree.JCModuleDecl;
-import com.sun.tools.javac.tree.TreeInfo;
 import com.sun.tools.javac.util.Context;
 import com.sun.tools.javac.util.ListBuffer;
 import com.sun.tools.javac.util.Name;
 import com.sun.tools.javac.util.Names;
-import jdk.javadoc.doclet.DocletEnvironment;
 import jdk.javadoc.doclet.DocletEnvironment.ModuleMode;
+import jdk.javadoc.internal.doclets.toolkit.WorkArounds;
 
 import static com.sun.tools.javac.code.Scope.LookupKind.NON_RECURSIVE;
 
@@ -165,8 +164,8 @@ public class ElementsTable {
     private final JavaFileManager fm;
     private final List<Location> locations;
     private final Modules modules;
-    private final Map<ToolOption, Object> opts;
-    private final Messager messager;
+    private final ToolOptions options;
+    private final JavadocLog log;
     private final JavaCompiler compiler;
 
     private final Map<String, Entry> entries = new LinkedHashMap<>();
@@ -174,7 +173,7 @@ public class ElementsTable {
     // specified elements
     private Set<ModuleElement> specifiedModuleElements = new LinkedHashSet<>();
     private Set<PackageElement> specifiedPackageElements = new LinkedHashSet<>();
-    private Set<TypeElement> specifiedTypeElements =new LinkedHashSet<>();
+    private Set<TypeElement> specifiedTypeElements = new LinkedHashSet<>();
 
     // included elements
     private Set<ModuleElement> includedModuleElements = null;
@@ -186,15 +185,15 @@ public class ElementsTable {
     private Set<ModulePackage> excludePackages = new LinkedHashSet<>();
     private Set<ModulePackage> subPackages = new LinkedHashSet<>();
 
-    private List<JCClassDecl> classDecList = Collections.emptyList();
-    private List<String> classArgList = Collections.emptyList();
-    private com.sun.tools.javac.util.List<JCCompilationUnit> classTreeList = null;
+    private List<JCClassDecl> classDecList = List.of();
+    private List<String> classArgList = List.of();
+    private com.sun.tools.javac.util.List<JCCompilationUnit> compilationUnitList = null;
 
     private final Set<JavaFileObject.Kind> sourceKinds = EnumSet.of(JavaFileObject.Kind.SOURCE);
 
     private final ModifierFilter accessFilter;
 
-    private final AccessKind expandRequires;
+    private final AccessLevel expandRequires;
 
     final boolean xclasses;
 
@@ -202,16 +201,16 @@ public class ElementsTable {
      * Creates the table to manage included and excluded elements.
      *
      * @param context the context to locate commonly used objects
-     * @param location the location used to locate source files
+     * @param options the tool options
      */
-    ElementsTable(Context context, Map<ToolOption, Object> opts) {
+    ElementsTable(Context context, ToolOptions options) {
         this.toolEnv = ToolEnvironment.instance(context);
         this.syms = Symtab.instance(context);
         this.names = Names.instance(context);
         this.fm = toolEnv.fileManager;
         this.modules = Modules.instance(context);
-        this.opts = opts;
-        this.messager = Messager.instance0(context);
+        this.options = options;
+        this.log = JavadocLog.instance0(context);
         this.compiler = JavaCompiler.instance(context);
         Source source = Source.instance(context);
 
@@ -230,9 +229,9 @@ public class ElementsTable {
 
         getEntry("").excluded = false;
 
-        accessFilter = new ModifierFilter(opts);
-        xclasses = (boolean)opts.getOrDefault(ToolOption.XCLASSES, false);
-        expandRequires = (AccessKind)opts.get(ToolOption.EXPAND_REQUIRES);
+        accessFilter = new ModifierFilter(options);
+        xclasses = options.xclasses();
+        expandRequires = options.expandRequires();
     }
 
     /**
@@ -240,12 +239,10 @@ public class ElementsTable {
      * @return the module documentation level mode
      */
     public ModuleMode getModuleMode() {
-        switch(accessFilter.getAccessValue(ElementKind.MODULE)) {
-            case PACKAGE: case PRIVATE:
-                return DocletEnvironment.ModuleMode.ALL;
-            default:
-                return DocletEnvironment.ModuleMode.API;
-        }
+        return switch (accessFilter.getAccessValue(ElementKind.MODULE)) {
+            case PACKAGE, PRIVATE -> ModuleMode.ALL;
+            default -> ModuleMode.API;
+        };
     }
 
     private Set<Element> specifiedElements = null;
@@ -273,7 +270,7 @@ public class ElementsTable {
      * A module is fully included,
      *   - is specified on the command line --module
      *   - is derived from the module graph, that is, by expanding the
-     *     requires directive, based on --expand-requires
+     *     'requires' directive, based on --expand-requires
      *
      * A module is included if an enclosed package or type is
      * specified on the command line.
@@ -319,9 +316,7 @@ public class ElementsTable {
      *
      * @param e the element in question
      *
-     * @see getIncludedModuleElements
-     * @see getIncludedPackageElements
-     * @see getIncludedTypeElements
+     * @see #getIncludedElements()
      *
      * @return true if included
      */
@@ -358,8 +353,8 @@ public class ElementsTable {
         initializeIncludedSets(expandedModulePackages);
     }
 
-    ElementsTable classTrees(com.sun.tools.javac.util.List<JCCompilationUnit> classTrees) {
-        this.classTreeList = classTrees;
+    ElementsTable compilationUnits(com.sun.tools.javac.util.List<JCCompilationUnit> compilationUnits) {
+        this.compilationUnitList = compilationUnits;
         return this;
     }
 
@@ -374,19 +369,19 @@ public class ElementsTable {
             return;
 
         if (moduleNames.size() > 1) {
-            String text = messager.getText("main.cannot_use_sourcepath_for_modules",
+            String text = log.getText("main.cannot_use_sourcepath_for_modules",
                     String.join(", ", moduleNames));
             throw new ToolException(CMDERR, text);
         }
 
         String foundModule = getModuleName(StandardLocation.SOURCE_PATH);
         if (foundModule == null) {
-            String text = messager.getText("main.module_not_found_on_sourcepath", moduleNames.get(0));
+            String text = log.getText("main.module_not_found_on_sourcepath", moduleNames.get(0));
             throw new ToolException(CMDERR, text);
         }
 
         if (!moduleNames.get(0).equals(foundModule)) {
-            String text = messager.getText("main.sourcepath_does_not_contain_module", moduleNames.get(0));
+            String text = log.getText("main.sourcepath_does_not_contain_module", moduleNames.get(0));
             throw new ToolException(CMDERR, text);
         }
     }
@@ -397,61 +392,75 @@ public class ElementsTable {
                     "module-info", JavaFileObject.Kind.SOURCE);
             if (jfo != null) {
                 JCCompilationUnit jcu = compiler.parse(jfo);
-                JCModuleDecl module = TreeInfo.getModule(jcu);
+                JCModuleDecl module = jcu.getModule();
                 if (module != null) {
                     return module.getName().toString();
                 }
             }
         } catch (IOException ioe) {
-            String text = messager.getText("main.file.manager.list", location);
+            String text = log.getText("main.file.manager.list", location);
             throw new ToolException(SYSERR, text, ioe);
         }
         return null;
     }
 
-    @SuppressWarnings("unchecked")
     ElementsTable scanSpecifiedItems() throws ToolException {
 
         // scan modules specified on the command line
-        List<String> moduleNames = (List<String>) opts.computeIfAbsent(ToolOption.MODULE,
-                s -> Collections.EMPTY_LIST);
+        List<String> modules = options.modules();
         List<String> mlist = new ArrayList<>();
-        for (String m : moduleNames) {
+        for (String m : modules) {
             List<Location> moduleLocations = getModuleLocation(locations, m);
             if (moduleLocations.isEmpty()) {
-                String text = messager.getText("main.module_not_found", m);
+                String text = log.getText("main.module_not_found", m);
                 throw new ToolException(CMDERR, text);
             }
             if (moduleLocations.contains(StandardLocation.SOURCE_PATH)) {
-                sanityCheckSourcePathModules(moduleNames);
+                sanityCheckSourcePathModules(modules);
             }
             mlist.add(m);
             ModuleSymbol msym = syms.enterModule(names.fromString(m));
-            specifiedModuleElements.add((ModuleElement) msym);
+            specifiedModuleElements.add(msym);
         }
 
         // scan for modules with qualified packages
         cmdLinePackages.stream()
-                .filter((mpkg) -> (mpkg.hasModule()))
-                .forEachOrdered((mpkg) -> {
-                    mlist.add(mpkg.moduleName);
-        });
+                .filter(ModulePackage::hasModule)
+                .forEachOrdered(mpkg -> mlist.add(mpkg.moduleName));
 
         // scan for modules with qualified subpackages
-        ((List<String>)opts.computeIfAbsent(ToolOption.SUBPACKAGES, v -> Collections.EMPTY_LIST))
-            .stream()
+        options.subpackages().stream()
             .map(ModulePackage::new)
-            .forEachOrdered((mpkg) -> {
+            .forEachOrdered(mpkg -> {
                 subPackages.add(mpkg);
                 if (mpkg.hasModule()) {
                     mlist.add(mpkg.moduleName);
                 }
             });
 
+        // scan any module-info.java files specified on the command line
+        for (var cu : compilationUnitList) {
+            loop:
+            for (var d : cu.defs) {
+                switch (d.getTag()) {
+                    case IMPORT -> { }
+                    case MODULEDEF -> {
+                        var md = (JCModuleDecl) d;
+                        var mn = md.qualId.toString();
+                        ModuleSymbol msym = syms.enterModule(names.fromString(mn));
+                        specifiedModuleElements.add(msym);
+                    }
+                    default -> {
+                        break loop;
+                    }
+                }
+            }
+        }
+
         // all the modules specified on the command line have been scraped
         // init the module systems
-        modules.addExtraAddModules(mlist.toArray(new String[mlist.size()]));
-        modules.initModules(this.classTreeList);
+        this.modules.addExtraAddModules(mlist.toArray(new String[mlist.size()]));
+        this.modules.initModules(this.compilationUnitList);
 
         return this;
     }
@@ -488,16 +497,16 @@ public class ElementsTable {
     ElementsTable packages(Collection<String> packageNames) {
         packageNames.stream()
             .map(ModulePackage::new)
-            .forEachOrdered((mpkg) -> cmdLinePackages.add(mpkg));
+            .forEachOrdered(mpkg -> cmdLinePackages.add(mpkg));
         return this;
     }
 
     /**
      * Returns the aggregate set of included packages and specified
-     * sub packages.
+     * subpackages.
      *
      * @return the aggregate set of included packages and specified
-     * sub packages
+     * subpackages
      */
     Iterable<ModulePackage> getPackagesToParse() throws IOException {
         List<ModulePackage> result = new ArrayList<>();
@@ -506,16 +515,12 @@ public class ElementsTable {
         return result;
     }
 
-    @SuppressWarnings("unchecked")
     private void computeSubpackages() throws ToolException {
-        ((List<String>) opts.computeIfAbsent(ToolOption.EXCLUDE, v -> Collections.EMPTY_LIST))
-                .stream()
+        options.excludes().stream()
                 .map(ModulePackage::new)
-                .forEachOrdered((mpkg) -> excludePackages.add(mpkg));
+                .forEachOrdered(mpkg -> excludePackages.add(mpkg));
 
-        excludePackages.forEach((p) -> {
-            getEntry(p).excluded = true;
-        });
+        excludePackages.forEach(p -> getEntry(p).excluded = true);
 
         for (ModulePackage modpkg : subPackages) {
             List<Location> locs = getLocation(modpkg);
@@ -533,7 +538,7 @@ public class ElementsTable {
         try {
             return fm.list(location, packagename, kinds, recurse);
         } catch (IOException ioe) {
-            String text = messager.getText("main.file.manager.list", packagename);
+            String text = log.getText("main.file.manager.list", packagename);
             throw new ToolException(SYSERR, text, ioe);
         }
     }
@@ -579,7 +584,10 @@ public class ElementsTable {
                 continue;
             if (!isMandated(mdle, rd) && onlyTransitive == rd.isTransitive()) {
                 if (!haveModuleSources(dep)) {
-                    messager.printWarning(dep, "main.module_not_found", dep.getSimpleName());
+                    if (!warnedNoSources.contains(dep)) {
+                        log.printWarningUsingKey(dep, "main.module_source_not_found", dep.getQualifiedName());
+                        warnedNoSources.add(dep);
+                    }
                 }
                 result.add(dep);
             } else if (isMandated(mdle, rd) && haveModuleSources(dep)) {
@@ -594,9 +602,11 @@ public class ElementsTable {
         return toolEnv.elements.getOrigin(mdle, rd) == MANDATED;
     }
 
+    Set<ModuleElement> warnedNoSources = new HashSet<>();
+
     Map<ModuleSymbol, Boolean> haveModuleSourcesCache = new HashMap<>();
     private boolean haveModuleSources(ModuleElement mdle) throws ToolException {
-        ModuleSymbol msym =  (ModuleSymbol)mdle;
+        ModuleSymbol msym =  (ModuleSymbol) mdle;
         if (msym.sourceLocation != null) {
             return true;
         }
@@ -617,8 +627,8 @@ public class ElementsTable {
             return;
         }
 
-        final boolean expandAll = expandRequires.equals(AccessKind.PRIVATE)
-                || expandRequires.equals(AccessKind.PACKAGE);
+        final boolean expandAll = expandRequires.equals(AccessLevel.PRIVATE)
+                || expandRequires.equals(AccessLevel.PACKAGE);
 
         Set<ModuleElement> result = new LinkedHashSet<>();
         ListBuffer<ModuleElement> queue = new ListBuffer<>();
@@ -634,7 +644,7 @@ public class ElementsTable {
 
             if (expandAll) {
                  // add non-public requires if needed
-                result.addAll(getModuleRequires(mdle, !expandAll));
+                result.addAll(getModuleRequires(mdle, false));
             }
         }
 
@@ -662,20 +672,20 @@ public class ElementsTable {
                 String binaryName = fm.inferBinaryName(msymloc, fo);
                 String pn = getPackageName(binaryName);
                 PackageSymbol psym = syms.enterPackage(msym, names.fromString(pn));
-                result.add((PackageElement) psym);
+                result.add(psym);
             }
         }
         return result;
     }
 
     private Set<PackageElement> computeModulePackages() throws ToolException {
-        AccessKind accessValue = accessFilter.getAccessValue(ElementKind.PACKAGE);
-        final boolean documentAllModulePackages = (accessValue == AccessKind.PACKAGE ||
-                accessValue == AccessKind.PRIVATE);
+        AccessLevel accessValue = accessFilter.getAccessValue(ElementKind.PACKAGE);
+        final boolean documentAllModulePackages = (accessValue == AccessLevel.PACKAGE ||
+                accessValue == AccessLevel.PRIVATE);
 
         accessValue = accessFilter.getAccessValue(ElementKind.MODULE);
-        final boolean moduleDetailedMode = (accessValue == AccessKind.PACKAGE ||
-                accessValue == AccessKind.PRIVATE);
+        final boolean moduleDetailedMode = (accessValue == AccessLevel.PACKAGE ||
+                accessValue == AccessLevel.PRIVATE);
         Set<PackageElement> expandedModulePackages = new LinkedHashSet<>();
 
         for (ModuleElement mdle : specifiedModuleElements) {
@@ -731,11 +741,9 @@ public class ElementsTable {
         // process types
         Set<TypeElement> iclasses = new LinkedHashSet<>();
         // add all types enclosed in expanded modules and packages
-        ipackages.forEach((pkg) -> {
-            addAllClasses(iclasses, pkg);
-        });
+        ipackages.forEach(pkg -> addAllClasses(iclasses, pkg));
         // add all types and its nested types
-        specifiedTypeElements.forEach((klass) -> {
+        specifiedTypeElements.forEach(klass -> {
             ModuleElement mdle = toolEnv.elements.getModuleOf(klass);
             if (mdle != null && !mdle.isUnnamed())
                 imodules.add(mdle);
@@ -758,7 +766,7 @@ public class ElementsTable {
         computeSubpackages();
 
         Set<PackageElement> packlist = new LinkedHashSet<>();
-        cmdLinePackages.forEach((modpkg) -> {
+        cmdLinePackages.forEach(modpkg -> {
             PackageElement pkg;
             if (modpkg.hasModule()) {
                 ModuleElement mdle = toolEnv.elements.getModuleElement(modpkg.moduleName);
@@ -770,7 +778,7 @@ public class ElementsTable {
             if (pkg != null) {
                 packlist.add(pkg);
             } else {
-                messager.printWarningUsingKey("main.package_not_found", modpkg.toString());
+                log.printWarningUsingKey("main.package_not_found", modpkg.toString());
             }
         });
         specifiedPackageElements = Collections.unmodifiableSet(packlist);
@@ -782,8 +790,8 @@ public class ElementsTable {
      */
     private void computeSpecifiedTypes() throws ToolException {
         Set<TypeElement> classes = new LinkedHashSet<>();
-          classDecList.forEach((def) -> {
-            TypeElement te = (TypeElement) def.sym;
+          classDecList.forEach(def -> {
+            TypeElement te = def.sym;
             if (te != null) {
                 addAllClasses(classes, te, true);
             }
@@ -791,7 +799,7 @@ public class ElementsTable {
         for (String className : classArgList) {
             TypeElement te = toolEnv.loadClass(className);
             if (te == null) {
-                String text = messager.getText("javadoc.class_not_found", className);
+                String text = log.getText("javadoc.class_not_found", className);
                 throw new ToolException(CMDERR, text);
             } else {
                 addAllClasses(classes, te, true);
@@ -804,10 +812,10 @@ public class ElementsTable {
             Collection<ModulePackage> collection,
             boolean recurse) throws ToolException {
         for (ModulePackage modpkg : collection) {
-            toolEnv.notice("main.Loading_source_files_for_package", modpkg.toString());
+            toolEnv.printInfo("main.Loading_source_files_for_package", modpkg.toString());
             List<JavaFileObject> files = getFiles(modpkg, recurse);
             if (files.isEmpty()) {
-                String text = messager.getText("main.no_source_files_for_package",
+                String text = log.getText("main.no_source_files_for_package",
                         modpkg.toString());
                 throw new ToolException(CMDERR, text);
             } else {
@@ -819,7 +827,7 @@ public class ElementsTable {
     /**
      * Returns an aggregated list of java file objects from the items
      * specified on the command line. The packages specified should not
-     * recurse, however sub-packages should recurse into the sub directories.
+     * recurse, however subpackages should recurse into the subdirectories.
      * @return a list of java file objects
      * @throws IOException if an error occurs
      */
@@ -833,7 +841,7 @@ public class ElementsTable {
     /**
      * Returns the set of source files for a package.
      *
-     * @param packageName the specified package
+     * @param modpkg the specified package
      * @return the set of file objects for the specified package
      * @throws ToolException if an error occurs while accessing the files
      */
@@ -848,7 +856,7 @@ public class ElementsTable {
         ListBuffer<JavaFileObject> lb = new ListBuffer<>();
         List<Location> locs = getLocation(modpkg);
         if (locs.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         String pname = modpkg.packageName;
         for (Location packageLocn : locs) {
@@ -865,10 +873,12 @@ public class ElementsTable {
 
     private ModuleSymbol findModuleOfPackageName(String packageName) {
             Name pack = names.fromString(packageName);
-            for (ModuleSymbol msym : modules.allModules()) {
-                PackageSymbol p = syms.getPackage(msym, pack);
-                if (p != null && !p.members().isEmpty()) {
-                    return msym;
+            if (modules.modulesInitialized()) {
+                for (ModuleSymbol msym : modules.allModules()) {
+                    PackageSymbol p = syms.getPackage(msym, pack);
+                    if (p != null && !p.members().isEmpty()) {
+                        return msym;
+                    }
                 }
             }
             return null;
@@ -876,7 +886,7 @@ public class ElementsTable {
 
     private List<Location> getLocation(ModulePackage modpkg) throws ToolException {
         if (locations.size() == 1 && !locations.contains(StandardLocation.MODULE_SOURCE_PATH)) {
-            return Collections.singletonList(locations.get(0));
+            return List.of(locations.get(0));
         }
 
         if (modpkg.hasModule()) {
@@ -885,7 +895,7 @@ public class ElementsTable {
         // TODO: handle invalid results better.
         ModuleSymbol msym = findModuleOfPackageName(modpkg.packageName);
         if (msym == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         return getModuleLocation(locations, msym.name.toString());
     }
@@ -920,7 +930,7 @@ public class ElementsTable {
         try {
             return fm.getLocationForModule(location, msymName);
         } catch (IOException ioe) {
-            String text = messager.getText("main.doclet_could_not_get_location", msymName);
+            String text = log.getText("main.doclet_could_not_get_location", msymName);
             throw new ToolException(ERROR, text, ioe);
         }
     }
@@ -967,9 +977,9 @@ public class ElementsTable {
             }
         } catch (CompletionFailure e) {
             if (e.getMessage() != null)
-                messager.printWarning(e.getMessage());
+                log.printWarning(e.getMessage());
             else
-                messager.printWarningUsingKey("main.unexpected.exception", e);
+                log.printWarningUsingKey("main.unexpected.exception", e);
         }
     }
 
@@ -989,7 +999,7 @@ public class ElementsTable {
         return (xclasses || toolEnv.getFileKind(te) == SOURCE) && isSelected(te);
     }
 
-    SimpleElementVisitor9<Boolean, Void> visibleElementVisitor = null;
+    SimpleElementVisitor14<Boolean, Void> visibleElementVisitor = null;
     /**
      * Returns true if the element is selected, by applying
      * the access filter checks. Special treatment is applied to
@@ -1006,10 +1016,10 @@ public class ElementsTable {
             return false;
         }
         if (visibleElementVisitor == null) {
-            visibleElementVisitor = new SimpleElementVisitor9<Boolean, Void>() {
+            visibleElementVisitor = new SimpleElementVisitor14<>() {
                 @Override
                 public Boolean visitType(TypeElement e, Void p) {
-                    if (!accessFilter.checkModifier(e)) {
+                    if (!accessFilter.checkModifier(e) && !WorkArounds.isImplicitlyDeclaredClass(e)) {
                         return false; // it is not allowed
                     }
                     Element encl = e.getEnclosingElement();
@@ -1028,20 +1038,26 @@ public class ElementsTable {
 
                 @Override
                 protected Boolean defaultAction(Element e, Void p) {
-                    return accessFilter.checkModifier(e);
+                    if (accessFilter.checkModifier(e)) {
+                        return true;
+                    } else {
+                        return WorkArounds.isImplicitlyDeclaredClass(e.getEnclosingElement())
+                                && e.getKind() != ElementKind.CONSTRUCTOR /* nothing interesting in that ctor */
+                                && AccessLevel.of(e.getModifiers()).compareTo(AccessLevel.PACKAGE) >= 0;
+                    }
                 }
 
                 @Override
                 public Boolean visitUnknown(Element e, Void p) {
-                    throw new AssertionError("unkown element: " + p);
+                    throw new AssertionError("unknown element: " + e);
                 }
             };
         }
         return visibleElementVisitor.visit(e);
     }
 
-    private class IncludedVisitor extends SimpleElementVisitor9<Boolean, Void> {
-        final private Set<Element> includedCache;
+    private class IncludedVisitor extends SimpleElementVisitor14<Boolean, Void> {
+        private final Set<Element> includedCache;
 
         public IncludedVisitor() {
             includedCache = new LinkedHashSet<>();
@@ -1074,14 +1090,11 @@ public class ElementsTable {
                 }
                 Element enclosing = e.getEnclosingElement();
                 if (enclosing != null) {
-                    switch(enclosing.getKind()) {
-                        case PACKAGE:
-                            return specifiedPackageElements.contains((PackageElement)enclosing);
-                        case CLASS: case INTERFACE: case ENUM: case ANNOTATION_TYPE:
-                            return visit((TypeElement) enclosing);
-                        default:
-                            throw new AssertionError("unknown element: " + enclosing);
-                    }
+                    return switch (enclosing.getKind()) {
+                        case CLASS, ENUM, RECORD, INTERFACE, ANNOTATION_TYPE -> visit(enclosing);
+                        case PACKAGE -> specifiedPackageElements.contains((PackageElement) enclosing);
+                        default -> throw new AssertionError("unknown element: " + enclosing);
+                    };
                 }
             }
             return false;
@@ -1093,14 +1106,14 @@ public class ElementsTable {
             if (includedCache.contains(e))
                 return true;
             if (visit(e.getEnclosingElement()) && isSelected(e)) {
-                switch(e.getKind()) {
-                    case ANNOTATION_TYPE: case CLASS: case ENUM: case INTERFACE:
-                    case MODULE: case OTHER: case PACKAGE:
-                        throw new AssertionError("invalid element for this operation: " + e);
-                    default:
+                switch (e.getKind()) {
+                    case CLASS, ENUM, RECORD, INTERFACE, ANNOTATION_TYPE,
+                            MODULE, OTHER, PACKAGE -> throw new AssertionError("invalid element for this operation: " + e);
+                    default -> {
                         // the only allowed kinds in the cache are "members"
                         includedCache.add(e);
                         return true;
+                    }
                 }
             }
             return false;
@@ -1173,8 +1186,7 @@ public class ElementsTable {
 
         @Override
         public boolean equals(Object obj) {
-            if (obj instanceof ModulePackage) {
-                ModulePackage that = (ModulePackage)obj;
+            if (obj instanceof ModulePackage that) {
                 return this.toString().equals(that.toString());
             }
             return false;
@@ -1206,64 +1218,33 @@ public class ElementsTable {
                                                     ElementKind.PACKAGE,
                                                     ElementKind.MODULE);
 
-        // all possible accesss levels allowed for each element
-        private final EnumMap<ElementKind, EnumSet<AccessKind>> filterMap =
-                new EnumMap<>(ElementKind.class);
-
-        // the specified access level for each element
-        private final EnumMap<ElementKind, AccessKind> accessMap =
+        // the allowed access level for each element kind
+        private final EnumMap<ElementKind, AccessLevel> allowedAccess =
                 new EnumMap<>(ElementKind.class);
 
         /**
          * Constructor - Specify a filter.
          *
-         * @param accessSet an Access filter.
+         * @param options the tool options
          */
-        ModifierFilter(Map<ToolOption, Object> opts) {
-
-            AccessKind accessValue = null;
+        ModifierFilter(ToolOptions options) {
             for (ElementKind kind : ALLOWED_KINDS) {
-                switch (kind) {
-                    case METHOD:
-                        accessValue  = (AccessKind)opts.get(ToolOption.SHOW_MEMBERS);
-                        break;
-                    case CLASS:
-                        accessValue  = (AccessKind)opts.get(ToolOption.SHOW_TYPES);
-                        break;
-                    case PACKAGE:
-                        accessValue  = (AccessKind)opts.get(ToolOption.SHOW_PACKAGES);
-                        break;
-                    case MODULE:
-                        accessValue  = (AccessKind)opts.get(ToolOption.SHOW_MODULE_CONTENTS);
-                        break;
-                    default:
-                        throw new AssertionError("unknown element: " + kind);
-
-                }
-                accessMap.put(kind, accessValue);
-                filterMap.put(kind, getFilterSet(accessValue));
+                var accessValue = switch (kind) {
+                    case METHOD  -> options.showMembersAccess();
+                    case CLASS   -> options.showTypesAccess();
+                    case PACKAGE -> options.showPackagesAccess();
+                    case MODULE  -> options.showModuleContents();
+                    default -> throw new AssertionError("unknown element: " + kind);
+                };
+                allowedAccess.put(kind, accessValue);
             }
         }
 
-        static EnumSet<AccessKind> getFilterSet(AccessKind acccessValue) {
-            switch (acccessValue) {
-                case PUBLIC:
-                    return EnumSet.of(AccessKind.PUBLIC);
-                case PROTECTED:
-                default:
-                    return EnumSet.of(AccessKind.PUBLIC, AccessKind.PROTECTED);
-                case PACKAGE:
-                    return EnumSet.of(AccessKind.PUBLIC, AccessKind.PROTECTED, AccessKind.PACKAGE);
-                case PRIVATE:
-                    return EnumSet.allOf(AccessKind.class);
-            }
-        }
-
-        public AccessKind getAccessValue(ElementKind kind) {
+        public AccessLevel getAccessValue(ElementKind kind) {
             if (!ALLOWED_KINDS.contains(kind)) {
                 throw new IllegalArgumentException("not allowed: " + kind);
             }
-            return accessMap.getOrDefault(kind, AccessKind.PROTECTED);
+            return allowedAccess.getOrDefault(kind, AccessLevel.PROTECTED);
         }
 
         /**
@@ -1273,33 +1254,20 @@ public class ElementsTable {
          * @return whether the modifiers pass this filter
          */
         public boolean checkModifier(Element e) {
-            Set<Modifier> modifiers = e.getModifiers();
-            AccessKind fflag = AccessKind.PACKAGE;
-            if (modifiers.contains(Modifier.PUBLIC)) {
-                fflag = AccessKind.PUBLIC;
-            } else if (modifiers.contains(Modifier.PROTECTED)) {
-                fflag = AccessKind.PROTECTED;
-            } else if (modifiers.contains(Modifier.PRIVATE)) {
-                fflag = AccessKind.PRIVATE;
-            }
-            EnumSet<AccessKind> filterSet = filterMap.get(getAllowedKind(e.getKind()));
-            return filterSet.contains(fflag);
+            var access = AccessLevel.of(e.getModifiers());
+            return allowedAccess.get(toTrackedKind(e.getKind())).compareTo(access) <= 0;
         }
 
-        // convert a requested element kind to an allowed access kind
-        private ElementKind getAllowedKind(ElementKind kind) {
-            switch (kind) {
-                case CLASS: case METHOD: case MODULE: case PACKAGE:
-                    return kind;
-                case ANNOTATION_TYPE: case ENUM: case INTERFACE:
-                    return ElementKind.CLASS;
-                case CONSTRUCTOR: case ENUM_CONSTANT: case EXCEPTION_PARAMETER:
-                case FIELD: case INSTANCE_INIT: case LOCAL_VARIABLE: case PARAMETER:
-                case RESOURCE_VARIABLE: case STATIC_INIT: case TYPE_PARAMETER:
-                    return ElementKind.METHOD;
-                default:
-                    throw new AssertionError("unsupported kind: " + kind);
-            }
+        // convert the requested element kind to a tracked access kind
+        // (access is tracked for certain kinds only)
+        private ElementKind toTrackedKind(ElementKind kind) {
+            return switch (kind) {
+                case CLASS, METHOD, MODULE, PACKAGE -> kind;
+                case RECORD, ANNOTATION_TYPE, ENUM, INTERFACE -> ElementKind.CLASS;
+                case CONSTRUCTOR, ENUM_CONSTANT, EXCEPTION_PARAMETER, FIELD, INSTANCE_INIT, LOCAL_VARIABLE,
+                        PARAMETER, RESOURCE_VARIABLE, STATIC_INIT, TYPE_PARAMETER, RECORD_COMPONENT -> ElementKind.METHOD;
+                default -> throw new AssertionError("unsupported kind: " + kind);
+            };
         }
     } // end ModifierFilter
 }
