@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static jdk.internal.jshell.tool.JShellTool.RECORD_SEPARATOR;
 import static jdk.internal.jshell.tool.JShellTool.getResource;
 import static jdk.internal.jshell.tool.JShellTool.readResource;
@@ -121,9 +120,13 @@ class Startup {
     }
 
     private static final String DEFAULT_STARTUP_NAME = "DEFAULT";
+    private static final String PREVIEW_DEFAULT_STARTUP_NAME = "PREVIEW_DEFAULT";
 
     // cached DEFAULT start-up
-    private static Startup defaultStartup = null;
+    private static Startup[] defaultStartup = new Startup[] {
+        null, //standard startup
+        null  //preview  startup
+    };
 
     // the list of entries
     private List<StartupEntry> entries;
@@ -171,7 +174,8 @@ class Startup {
     boolean isDefault() {
         if (entries.size() == 1) {
             StartupEntry sue = entries.get(0);
-            if (sue.isBuiltIn && sue.name.equals(DEFAULT_STARTUP_NAME)) {
+            if (sue.isBuiltIn && (sue.name.equals(DEFAULT_STARTUP_NAME) ||
+                                  sue.name.equals(PREVIEW_DEFAULT_STARTUP_NAME))) {
                 return true;
             }
         }
@@ -222,7 +226,7 @@ class Startup {
      * @param mh handler for error messages
      * @return Startup, or default startup when error (message has been printed)
      */
-    static Startup unpack(String storedForm, MessageHandler mh) {
+    static Startup unpack(String storedForm, boolean preview, MessageHandler mh) {
         if (storedForm != null) {
             if (storedForm.isEmpty()) {
                 return noStartup();
@@ -235,17 +239,11 @@ class Startup {
                 } else if (all.length % 4 == 0) {
                     List<StartupEntry> e = new ArrayList<>(all.length / 4);
                     for (int i = 0; i < all.length; i += 4) {
-                        final boolean isBuiltIn;
-                        switch (all[i]) {
-                            case "*":
-                                isBuiltIn = true;
-                                break;
-                            case "-":
-                                isBuiltIn = false;
-                                break;
-                            default:
-                                throw new IllegalArgumentException("Unexpected StartupEntry kind: " + all[i]);
-                        }
+                        final boolean isBuiltIn = switch (all[i]) {
+                            case "*" -> true;
+                            case "-" -> false;
+                            default -> throw new IllegalArgumentException("Unexpected StartupEntry kind: " + all[i]);
+                        };
                         String name = all[i + 1];
                         String timeStamp = all[i + 2];
                         String content = all[i + 3];
@@ -266,7 +264,7 @@ class Startup {
                 mh.errormsg("jshell.err.corrupted.stored.startup", ex.getMessage());
             }
         }
-        return defaultStartup(mh);
+        return defaultStartup(preview, mh);
     }
 
     /**
@@ -280,7 +278,7 @@ class Startup {
     static Startup fromFileList(List<String> fns, String context, MessageHandler mh) {
         List<StartupEntry> entries = fns.stream()
                 .map(fn -> readFile(fn, context, mh))
-                .collect(toList());
+                .toList();
         if (entries.stream().anyMatch(sue -> sue == null)) {
             return null;
         }
@@ -335,22 +333,26 @@ class Startup {
      * @param mh handler for error messages
      * @return The default Startup, or empty startup when error (message has been printed)
      */
-    static Startup defaultStartup(MessageHandler mh) {
-        if (defaultStartup != null) {
-            return defaultStartup;
+    static Startup defaultStartup(boolean preview, MessageHandler mh) {
+        int idx = preview ? 1 : 0;
+
+        if (defaultStartup[idx] != null) {
+            return defaultStartup[idx];
         }
+        String resourceName = preview ? PREVIEW_DEFAULT_STARTUP_NAME
+                                      : DEFAULT_STARTUP_NAME;
         try {
-            String content = readResource(DEFAULT_STARTUP_NAME);
-            return defaultStartup = new Startup(
-                    new StartupEntry(true, DEFAULT_STARTUP_NAME, content));
+            String content = readResource(resourceName);
+            return defaultStartup[idx] = new Startup(
+                    new StartupEntry(true, resourceName, content));
         } catch (AccessDeniedException e) {
-            mh.errormsg("jshell.err.file.not.accessible", "jshell", DEFAULT_STARTUP_NAME, e.getMessage());
+            mh.errormsg("jshell.err.file.not.accessible", "jshell", resourceName, e.getMessage());
         } catch (NoSuchFileException e) {
-            mh.errormsg("jshell.err.file.not.found", "jshell", DEFAULT_STARTUP_NAME);
+            mh.errormsg("jshell.err.file.not.found", "jshell", resourceName);
         } catch (Exception e) {
-            mh.errormsg("jshell.err.file.exception", "jshell", DEFAULT_STARTUP_NAME, e);
+            mh.errormsg("jshell.err.file.exception", "jshell", resourceName, e);
         }
-        return defaultStartup = noStartup();
+        return defaultStartup[idx] = noStartup();
     }
 
 }
