@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,21 +26,20 @@ package compiler.codecache.stress;
 import jdk.test.lib.Asserts;
 import jdk.test.lib.ByteCodeLoader;
 import jdk.test.lib.InfiniteLoop;
-import jdk.test.lib.Utils;
-import sun.hotspot.WhiteBox;
+import jdk.test.whitebox.WhiteBox;
 
 import java.io.BufferedInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.util.Random;
 import java.util.concurrent.Callable;
+import java.util.concurrent.ThreadFactory;
 
 public final class Helper {
+    public static final boolean VIRTUAL_THREAD = Boolean.getBoolean("helperVirtualThread");
     public static final WhiteBox WHITE_BOX = WhiteBox.getWhiteBox();
-    public static final Random RNG = Utils.getRandomInstance();
 
     private static final long THRESHOLD = WHITE_BOX.getIntxVMFlag("CompileThreshold");
-    private static final String TEST_CASE_IMPL_CLASS_NAME = "compiler.codecache.stress.Helper$TestCaseImpl";
+    private static final String TEST_CASE_IMPL_CLASS_NAME = TestCaseImpl.class.getName();
     private static byte[] CLASS_DATA;
     static {
         try {
@@ -58,9 +57,15 @@ public final class Helper {
     }
 
     public static void startInfiniteLoopThread(Runnable action, long millis) {
-        Thread t = new Thread(new InfiniteLoop(action, millis));
-        t.setDaemon(true);
-        t.start();
+        startInfiniteLoopThread(threadFactory(VIRTUAL_THREAD), action, millis);
+    }
+
+    public static void startInfiniteLoopThread(ThreadFactory threadFactory, Runnable action, long millis) {
+        threadFactory.newThread(new InfiniteLoop(action, millis)).start();
+    }
+
+    public static ThreadFactory threadFactory(boolean virtual) {
+        return (virtual ? Thread.ofVirtual() : Thread.ofPlatform().daemon()).factory();
     }
 
     public static int callMethod(Callable<Integer> callable, int expected) {
@@ -109,34 +114,4 @@ public final class Helper {
         int method();
         int expectedValue();
     }
-
-    public static class TestCaseImpl implements TestCase {
-        private static final int RETURN_VALUE = 42;
-        private static final int RECURSION_DEPTH = 10;
-        private volatile int i;
-
-        @Override
-        public Callable<Integer> getCallable() {
-            return () -> {
-                i = 0;
-                return method();
-            };
-        }
-
-        @Override
-        public int method() {
-            ++i;
-            int result = RETURN_VALUE;
-            if (i < RECURSION_DEPTH) {
-                return result + method();
-            }
-            return result;
-        }
-
-        @Override
-        public int expectedValue() {
-            return RETURN_VALUE * RECURSION_DEPTH;
-        }
-    }
-
 }
