@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -25,8 +23,9 @@
 
 /*
  * @test
- * @bug 4397357 6565620 6959267 8032446 8072600
+ * @bug 4397357 6565620 6959267 8032446 8072600 8221431
  * @summary Confirm normal case mappings are handled correctly.
+ * @library /lib/testlibrary/java/lang
  * @run main/timeout=200 UnicodeCasingTest
  */
 
@@ -44,7 +43,7 @@ public class UnicodeCasingTest {
     // Locales which are used for testing
     private static List<Locale> locales = new ArrayList<>();
     static {
-        locales.add(new Locale("az", ""));
+        locales.add(Locale.of("az"));
         locales.addAll(java.util.Arrays.asList(Locale.getAvailableLocales()));
     }
 
@@ -60,8 +59,7 @@ public class UnicodeCasingTest {
         BufferedReader in = null;
 
         try {
-            File file = new File(System.getProperty("test.src", "."),
-                                 "UnicodeData.txt");
+            File file = UCDFiles.UNICODE_DATA.toFile();
 
             int locale_num = locales.size();
             for (int l = 0; l < locale_num; l++) {
