@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2012, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,45 +23,58 @@
 
 /* @test
  * @bug 4924226
- * @summary PIT: Can no launch jnlp application via 127.0.0.1 address on the web server
- * @modules java.base/sun.net.www
- * @library ../../../sun/net/www/httptest/
- * @build ClosedChannelList TestHttpServer HttpTransaction HttpCallback
+ * @key intermittent
+ * @summary PIT: Can no launch jnlp application via 127.0.0.1 address on the web server.
+ *          This test might fail intermittently as it needs a server that
+ *          binds to the wildcard address.
+ * @library /test/lib
  * @compile LoopbackAddresses.java
  * @run main/othervm LoopbackAddresses
  */
 
-import java.net.*;
-import java.io.*;
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.net.HttpURLConnection;
+import java.net.InetAddress;
+import java.net.InetSocketAddress;
+import java.net.ServerSocket;
+import java.net.Socket;
+import java.net.URL;
+import java.nio.charset.Charset;
+import java.util.concurrent.Executors;
+
+import com.sun.net.httpserver.HttpExchange;
+import com.sun.net.httpserver.HttpHandler;
+import com.sun.net.httpserver.HttpServer;
+import jdk.test.lib.net.URIBuilder;
 
 /**
  * Our default proxy selector should bypass localhost and loopback
  * addresses when selecting proxies. This is the existing behaviour.
  */
 
-public class LoopbackAddresses implements HttpCallback {
-    static TestHttpServer server;
-
-    public void request (HttpTransaction req) {
-        req.setResponseEntityBody ("Hello .");
-        try {
-            req.sendResponse (200, "Ok");
-            req.orderlyClose();
-        } catch (IOException e) {
-        }
-    }
+public class LoopbackAddresses {
+    static HttpServer server;
 
     public static void main(String[] args) {
         try {
-            server = new TestHttpServer (new LoopbackAddresses(), 1, 10, 0);
-            ProxyServer pserver = new ProxyServer(InetAddress.getByName("localhost"), server.getLocalPort());
+            InetAddress loopback = InetAddress.getLoopbackAddress();
+
+            // This server needs to bind to the wildcard address as we want it
+            // to answer both for the loopback and "localhost".
+            // Though "localhost" usually point to the loopback there is no
+            // hard guarantee.
+            server = HttpServer.create(new InetSocketAddress(loopback, 0), 10, "/", new LoopbackAddressesHandler());
+            server.setExecutor(Executors.newSingleThreadExecutor());
+            server.start();
+            ProxyServer pserver = new ProxyServer(InetAddress.getByName("localhost"), server.getAddress().getPort());
             // start proxy server
             new Thread(pserver).start();
 
-            System.setProperty("http.proxyHost", "localhost");
+            System.setProperty("http.proxyHost", loopback.getHostAddress());
             System.setProperty("http.proxyPort", pserver.getPort()+"");
 
-            URL url = new URL("http://localhost:"+server.getLocalPort());
+            URL url = new URL("http://localhost:"+server.getAddress().getPort());
 
             try {
                 HttpURLConnection urlc = (HttpURLConnection)url.openConnection ();
@@ -72,7 +85,11 @@ public class LoopbackAddresses implements HttpCallback {
             }
 
             try {
-                url = new URL("http://127.0.0.1:"+server.getLocalPort());
+                url = URIBuilder.newBuilder()
+                      .scheme("http")
+                      .host(loopback.getHostAddress())
+                      .port(server.getAddress().getPort())
+                      .toURL();
                 HttpURLConnection urlc = (HttpURLConnection)url.openConnection ();
                 int respCode = urlc.getResponseCode();
                 urlc.disconnect();
@@ -83,7 +100,7 @@ public class LoopbackAddresses implements HttpCallback {
             throw new RuntimeException(e);
         } finally {
             if (server != null) {
-                server.terminate();
+                server.stop(1);
             }
         }
 
@@ -104,7 +121,8 @@ public class LoopbackAddresses implements HttpCallback {
         public ProxyServer(InetAddress server, int port) throws IOException {
             serverInetAddr = server;
             serverPort = port;
-            ss = new ServerSocket(0);
+            ss = new ServerSocket();
+            ss.bind(new InetSocketAddress(InetAddress.getLoopbackAddress(), 0));
         }
 
         public void run() {
@@ -133,6 +151,21 @@ public class LoopbackAddresses implements HttpCallback {
 */
         public int getPort() {
             return ss.getLocalPort();
+        }
+    }
+}
+
+class LoopbackAddressesHandler implements HttpHandler {
+
+    @Override
+    public void handle(HttpExchange exchange) throws IOException {
+        try {
+            exchange.sendResponseHeaders(200, 0);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        try(PrintWriter pw = new PrintWriter(exchange.getResponseBody(), false, Charset.forName("UTF-8"))) {
+            pw.print("Hello .");
         }
     }
 }
