@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,13 +20,21 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
+
 /*
- *
+ * @test
+ * @bug 6388652 8062588 8210406 8174269
+ * @summary Checks whether providers can be loaded from classpath.
+ * @library providersrc/foobarutils
+ *          providersrc/barprovider
+ * @build com.foobar.Utils
+ *        com.bar.*
+ * @run main/othervm -Djava.locale.providers=CLDR,SPI ClasspathTest
  */
 
-import java.text.*;
-import java.util.*;
-import sun.util.resources.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Locale;
 
 public class ClasspathTest {
 
@@ -39,7 +47,7 @@ public class ClasspathTest {
          * Since providers can be loaded from the application's classpath,
          * this test will fail if they are NOT loaded from classpath.
          */
-        Locale OSAKA = new Locale("ja", "JP", "osaka");
+        Locale OSAKA = Locale.of("ja", "JP", "osaka");
         List<Locale> availableLocales = Arrays.asList(Locale.getAvailableLocales());
         if (!availableLocales.contains(OSAKA)) {
             throw new RuntimeException("LSS providers were NOT loaded from the class path.");
