@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -50,7 +48,7 @@ public class TestGCConfigurationEventWithDefaultPauseTarget {
         recording.stop();
         List<RecordedEvent> events = Events.fromRecording(recording);
         assertGreaterThanOrEqual(events.size(), 1, "Expected at least 1 event");
-        DefaultGCConfigurationVerifier verifier = new DefaultGCConfigurationVerifier(events.get(0));
+        DefaultGCConfigurationVerifier verifier = new DefaultGCConfigurationVerifier(events.getFirst());
         verifier.verify();
     }
 }
