@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -62,7 +60,7 @@ public class StartupHelper {
         searchPaths.add(root);
 
         while (!searchPaths.isEmpty()) {
-            Path currRoot = searchPaths.remove(searchPaths.size() - 1);
+            Path currRoot = searchPaths.removeLast();
             DirectoryStream<Path> contents = Files.newDirectoryStream(currRoot);
             for (Path path : contents) {
                 paths.add(path);
